--- a/localisation/bav_events_l_english.yml
+++ b/localisation/bav_events_l_english.yml
@@ -1,74 +1,74 @@
 ﻿l_english:
-bavaria.1.t:0 "Bavaria Is Preparing To March Into The Rhine!"
-bavaria.1.d:0 "We were left on our own after the Rhine Conference. The Bavarian Soviet Republic is threatening to invade our terrority unless we sumbit. How should we proceed?"
-bavaria.1.a:0 "We fold under the might of Bavaria"
-bavaria.1.b:0 "No! The Confederation will stand steadfast."
-bavaria.2.t:0 "The Rhine Folds"
-bavaria.2.d:0 "Hurrah! We are victorious, the weak Confederation of The Rhine has folded under our might."
-bavaria.2.a:0 "Execellent"
-bavaria.3.t:0 "The Rhine Declines Our Offer"
-bavaria.3.d:0 "The feeble Confederation Of The Rhine has rejected our offer. We must prepare for war."
-bavaria.3.a:0 "For The Motherland!"
-bavaria.4.t:0 "Swabian Rebels Are Preparing To Rise Up!"
-bavaria.4.d:0 "Rebels are rising up in the streets of our towns and cities, demanding a union with the Bavarian Soviet Republic! How should we proceed?"
-bavaria.4.a:0 "A union would be the best course of action."
-bavaria.4.b:0 "We will not submit to communist scum!."
-bavaria.5.t:0 "The Wurttemberg-Bavaria Union"
-bavaria.5.d:0 "Today the leader of Wurttemberg has signed a treaty allowing a union between our two nations."
-bavaria.5.a:0 "Execellent"
-bavaria.6.t:0 "The Stuttgart Massacre"
-bavaria.6.d:0 "Our Spies have reported that our communist brothers are being gunned down in the streets. An image in a newspaper shows a fountain filled with dead bodies This is unacceptable!"
-bavaria.6.a:0 "Death to the opressors!"
-bavaria.7.t:0 "Bavaria Demands Our Submission"
-bavaria.7.d:0 "The Soviet Republic Of Bavaria is demanding that we hand over all of our land. How should we proceed?"
-bavaria.7.a:0 "We must submit."
-bavaria.7.b:0 "We will not submit to communist scum!."
-bavaria.8.t:0 "Niederdeutschland submits"
-bavaria.8.d:0 "We have recieved a telegram from Niederdeutschland. It says that they have accepted our offer and are laying down their arms."
-bavaria.8.a:0 "Execellent"
-bavaria.9.t:0 "Niederdeutschland Declines Our Offer"
-bavaria.9.d:0 "We have recieved a telegram from Niederdeutschland. It says they have chosen to decline our offer."
-bavaria.9.a:0 "They will regret this..."
-bavaria.10.t:0 "Bavaria is preparing to mobilize!"
-bavaria.10.d:0 "Our scouts are reporting heavy levels of Bavarian activity on the border. Our recon planes show images of large convoys of tanks, trucks, and infantry moving throughout their land. We can either offer them our submission or fight."
-bavaria.10.a:0 "We must submit."
-bavaria.10.b:0 "Death To The Reds!"
-bavaria.11.t:0 "Prussia caves in"
-bavaria.11.d:0 "The weak Kaiser Wilhelm II has caved in to our demands and has been sent to a prison camp. We'll have him 'dealt' with."
-bavaria.11.a:0 "Execellent"
-bavaria.12.t:0 "Prussia Mobilzies Its Army!"
-bavaria.12.d:0 "In a respone to our movements on the border, Prussia has sent its army down to clash with ours. Reports are coming in that Prussian tanks and planes are seizing key border towns. We must repel the invasion!"
-bavaria.12.a:0 "Death To The Kaiser!"
-bavaria.13.t:0 "Bavaria Proclaims German Hegemony"
-bavaria.13.d:0 "Today, the leader of the Bavarian Soviet Republic has proclaimed German Hegemony. After The Great War, the German Empire was split into various groups, which have been arguing over who the rightful ruler of Germany is."
-bavaria.13.a:0 "This can't end well."
-news.1001.t:0 "Workers International Congress"
-news.1001.d:0 "Today in Munich an international workers congress was held for the first time. Socialist parties from across the world have talked about development policies and socialism around the world. Communist leaders from France, the United Kingdom, the United States and even Russia have all participated in this assembly."
-news.1001.a:0 "Interesting..."
-bavaria.15.t:0 "Restoration of the German Navy"
-bavaria.15.d:0 "Now that we control most of Germany, it is time we recover the German Kaiserlicher Marine and form the Red Navy. It must be done as soon as possible so that we can secure our presence in the Baltic and the North Sea."
-bavaria.15.a:0 "Form the Red Navy"
-bavaria.16.t:0 "Assimilation of Austria"
-bavaria.16.d:0 "Now that we control most of Austria, we should integrate the Austrian population into the Commune. Communist ideas are not far spread in Austria, so many people will resist, but soon they will realize we have freed them from the chains of their dictatorship."
-bavaria.16.a:0 "There can be only one Germany"
-bavaria.17.t:0 "Rhine Conference"
-bavaria.17.d:0 "The Southern Commune demands submission and annexation of the Confederation of the Rhine. The Communards are willing to reunite Germany under the Red Star. The Rhineland is a key region of Germany that possesses industry and resources.\nOn one side, we cannot abandon the Rhenish nation as their independence is guaranteed by the French Republic. However with communist sympathizers in our country, we cannot risk a war with the Marxist power, as this might very well spark a civil war that we cannot afford..."
-bavaria.17.a:0 "The Rhenish are on their own."
-bavaria.17.b:0 "The Rhine Confederacy must be defended!"
-bavaria.18.t:0 "France Folds"
-bavaria.18.d:0 "Its been couple of days since the Rhine Conference has begun. France has finally annouced its decision to abandon the Rhine Confederacy. This means, we can now intevene without French threat and secure the Confederacy to begin its integration."
-bavaria.18.a:0 "Execellent news!"
-bavaria.19.t:0 "France Backs The Rhineland"
-bavaria.19.d:0 "The negotiations have failed. France has reaffirmed its guarantee of independence. This however, has sparked a civil war led by our fellow workers. It is time we act and invade the weakened France and Rhineland."
-bavaria.19.a:0 "Onwards!"
-bavaria.20.t:0 "France abandons The Rhineland"
-bavaria.20.d:0 "The Southern Commune demands submission and annexation of the Confederation of the Rhine. The Communards are willing to reunite Germany under the Red Star. The Rhineland is the a region of Germany that possesses industry and resources.\nUltimately France has annouced its decision to withdraw from the Rhineland leaving the Rhenish on their own."
-bavaria.20.a:0 "Interesting"
-bavaria.20.b:0 "One more step towards reunification!"
-bavaria.21.t:0 "France Backs The Rhineland"
-bavaria.21.d:0 "The Southern Commune demands submission and annexation of the Confederation of the Rhine. The Communards are willing to reunite Germany under the Red Star. The Rhineland is a key region of Germany that possesses industry and resources.\nUltimately France has annouced its decision to back up the Rhineland in case of war which did upset communist activists in France..."
-bavaria.21.a:0 "This might not end well"
-bavaria.21.b:0 "Long live Red Germany!"
-bavaria.22.t:0 "France is with us"
-bavaria.22.d:0 "We are not alone! France backs up our independence and, in case of war, will protect us!"
-bavaria.22.a:0 "This is great!"
+bavaria.1.t:0 "바바리아는 라인으로 진군할 준비를 하고 있다!"
+bavaria.1.d:0 "라인 회담 후에 우리는 혼자 남게 되었다. 바이에른 소비에트 공화국은 우리가 굴복하지 않는 한 우리의 영토를 침략하겠다고 위협하고 있다. 어떻게 진행하면 좋을까?"
+bavaria.1.a:0 "우리는 바이에른의 힘 앞에 굴복한다."
+bavaria.1.b:0 "안 돼! 연합은 확고하게 서 있을 거야."
+bavaria.2.t:0 "라인이 굴복하다"
+bavaria.2.d:0 "만세! 우리는 승리했다. 약한 라인 연합은 우리의 힘 아래 굴복했다."
+bavaria.2.a:0 "훌륭해"
+bavaria.3.t:0 "라인이 우리 제안을 거절하다"
+bavaria.3.d:0 "라인 연합이 우리의 제안을 거절했다. 우리는 전쟁에 대비해야 한다."
+bavaria.3.a:0 "모국을 위하여!"
+bavaria.4.t:0 "슈바벤 반군들이 일어설 준비를 하고 있다!"
+bavaria.4.d:0 "바이에른 소비에트 공화국과의 연합을 요구하며 우리 마을과 도시의 거리에서 반란이 일어나고 있다! 어떻게 진행하면 좋을까?"
+bavaria.4.a:0 "연합하는 것이 최선의 행동 방침일 것이다."
+bavaria.4.b:0 "우리는 공산주의 쓰레기에게 복종하지 않을 것이다!"
+bavaria.5.t:0 "뷔템베르크-바이에른 연합"
+bavaria.5.d:0 "오늘 뷔템베르크의 지도자는 우리 두 나라 사이의 연합을 허용하는 조약에 서명했다."
+bavaria.5.a:0 "훌륭해"
+bavaria.6.t:0 "슈투트가르트 학살"
+bavaria.6.d:0 "우리 스파이들이 우리 공산주의 형제들이 거리에서 총에 맞아 죽어가고 있다고 보고했다. 신문 속의 사진은 시체로 가득 찬 분수를 보여준다. 이것은 용납될 수 없다!"
+bavaria.6.a:0 "압제자들에게 죽음을!"
+bavaria.7.t:0 "바이에른이 우리의 굴복을 요구하다"
+bavaria.7.d:0 "바이에른 소비에트 공화국은 우리 땅을 모두 넘겨줄 것을 요구하고 있다. 어떻게 진행하면 좋을까?"
+bavaria.7.a:0 "우리는 굴복해야만 한다."
+bavaria.7.b:0 "우리는 공산주의 쓰레기에게 복종하지 않을 것이다!"
+bavaria.8.t:0 "저지 독일이 굴복하다"
+bavaria.8.d:0 "우리는 이미 저지 독일로부터 전보를 받았다. 그들은 우리의 제의를 받아들여 무기를 내려놓고 있다고 한다."
+bavaria.8.a:0 "훌륭해"
+bavaria.9.t:0 "저지 독일이 우리의 제안을 거절하다"
+bavaria.9.d:0 "우리는 이미 저지 독일로부터 전보를 받았다. 그것은 그들이 우리의 제의를 거절하기로 선택했다고 말한다."
+bavaria.9.a:0 "그들은 이것을 후회할 것이다..."
+bavaria.10.t:0 "바이에른이 동원 준비를 하고 있다!"
+bavaria.10.d:0 "우리 정찰병들은 국경에서 바이에른 활동량이 많다고 보고하고 있다. 우리의 정찰기는 전차, 장갑차, 보병들이 그들의 땅을 가로질러 이동하는 모습을 보여준다. 우리는 그들에게 우리의 항복을 제안하거나 싸울 수 있다."
+bavaria.10.a:0 "우리는 항복해야만 한다."
+bavaria.10.b:0 "빨갱이들에게 죽음을!"
+bavaria.11.t:0 "프로이센이 항복하다"
+bavaria.11.d:0 "약한 카이저 빌헬름 2세는 우리의 요구에 굴복하여 수용소로 보내졌다. 우리는 그와 '거래'를 할 것이다."
+bavaria.11.a:0 "훌륭해"
+bavaria.12.t:0 "프로이센이 군대를 동원하다!"
+bavaria.12.d:0 "국경에서의 우리의 움직임에 대한 반발로 프로이센은 군대를 내려보내 우리와 충돌하게 했다. 프로이센 전차와 비행기가 주요 국경 도시를 장악하고 있다는 보도가 나오고 있다. 침략을 물리쳐야 한다!"
+bavaria.12.a:0 "카이저에게 죽음을!"
+bavaria.13.t:0 "바이에른이 독일 패권을 선언하다"
+bavaria.13.d:0 "오늘날 바이에른 소비에트 공화국의 지도자는 독일의 패권을 선언했다. 대전이 끝난 후 독일 제국은 여러 집단으로 분열되었는데, 이 집단들은 독일의 정당한 통치자가 누구인지를 놓고 논쟁을 벌여왔다."
+bavaria.13.a:0 "이 일은 좋게 끝날 수 없다."
+news.1001.t:0 "국제 노동자 대회"
+news.1001.d:0 "오늘 뮌헨에서 처음으로 국제 노동자 대회가 열렸다. 전 세계의 사회주의 정당들은 개발정책과 사회주의에 대해 전세계적으로 이야기해왔다. 프랑스, 영국, 미국, 그리고 심지어 러시아에서 온 공산당 지도자들이 모두 이 집회에 참가했다."
+news.1001.a:0 "흥미롭군..."
+bavaria.15.t:0 "독일 해군의 재건"
+bavaria.15.d:0 "이제 독일 대부분을 장악하고 있으니 독일 제국 함대를 되찾아 붉은 함대을 구성할 때가 되었다. 발트해와 북해에서 우리의 입지를 확보할 수 있도록 가능한 한 빨리 해야 한다."
+bavaria.15.a:0 "붉은 함대 형성"
+bavaria.16.t:0 "오스트리아의 암살"
+bavaria.16.d:0 "이제 우리는 오스트리아의 대부분을 장악하고 있으므로 오스트리아 인구를 코뮌으로 통합해야 한다. 공산주의 사상은 오스트리아에서 멀리 퍼져 있지 않기 때문에 많은 사람들이 저항할 것이지만, 곧 그들은 우리가 그들의 독재 정권의 사슬에서 그들을 해방시켰다는 것을 깨닫게 될 것이다."
+bavaria.16.a:0 "독일은 하나밖에 있을 수 없다"
+bavaria.17.t:0 "라인 회담"
+bavaria.17.d:0 "남부 코뮌은 라인 연합의 굴복과 합병을 요구한다. 공산주의자들은 붉은 별 아래 독일을 재결합시킬 의도를 가지고 있다. 라인란트는 독일의 산업과 자원을 보유한 핵심 지역이다.\n라인 연합은 프랑스 공화국에 의해 독립이 보장되어 있기 때문에 이를 내버려 둘 수 없다. 그러나 우리 나라의 공산주의 동조자들로 인해, 마르크스주의 세력과 전쟁을 벌일 수 없다. 왜냐하면 이것은 우리가 감당할 수 없는 내전을 일으킬 수도 있기 때문이다."
+bavaria.17.a:0 "라인 연합의 운명은 스스로에게 달려 있다."
+bavaria.17.b:0 "라인 연합은 반드시 방어되어야 한다!"
+bavaria.18.t:0 "프랑스가 물러서다"
+bavaria.18.d:0 "라인 회담이 시작된 지 며칠이 지났다. 프랑스는 마침내 라인 연합을 포기하기로 한 결정을 발표했다. 이것은 우리가 이제 프랑스의 위협 없이 라인 연합의 통합을 시작할 수 있다는 것을 의미한다."
+bavaria.18.a:0 "훌륭한 소식이다!"
+bavaria.19.t:0 "프랑스가 라인 연합의 독립을 보장하다"
+bavaria.19.d:0 "협상은 실패했다. 프랑스는 라인 연합에 대한 독립 보장을 재확인했다. 그러나 이 결정은 프랑스 내에서 우리 동지들의 주도 하에 내전을 촉발시켰다. 지금은 우리가 행동하고 약해진 프랑스와 라인란트를 공격해야 할 때다."
+bavaria.19.a:0 "진격!"
+bavaria.20.t:0 "프랑스가 라인란트를 버리다"
+bavaria.20.d:0 "남부 코뮌은 라인 연합의 굴복과 합병을 요구한다. 공산주의자들은 붉은 별 아래 독일을 재결합시킬 의도를 가지고 있다. 라인란트는 독일의 산업과 자원을 보유한 핵심 지역이다.\n최종적으로 프랑스는 라인란트에서 철수한다는 결정을 발표했다."
+bavaria.20.a:0 "흥미롭군"
+bavaria.20.b:0 "통일을 향해 한 걸음 더 나아간다!"
+bavaria.21.t:0 "프랑스가 라인 연합의 독립을 보장하다"
+bavaria.21.d:0 "남부 코뮌은 라인 연합의 굴복과 합병을 요구한다. 공산주의자들은 붉은 별 아래 독일을 재결합시킬 의도를 가지고 있다. 라인란트는 독일의 산업과 자원을 보유한 핵심 지역이다.\n궁극적으로 프랑스는 프랑스의 공산주의 운동가들을 화나게 한 전쟁이 일어날 경우에 대비해 라인랜드를 지원하기로 결정했다고 발표했다..."
+bavaria.21.a:0 "이 일은 좋게 끝날 수 없다."
+bavaria.21.b:0 "붉은 독일이여 영원하라!"
+bavaria.22.t:0 "프랑스는 우리와 함께 있다"
+bavaria.22.d:0 "우리는 혼자가 아니야! 프랑스는 우리의 독립을 지지하고, 전쟁이 일어나면 우리를 보호할 것이다!"
+bavaria.22.a:0 "대단하군!"
