--- a/localisation/ger_events_l_english.yml
+++ b/localisation/ger_events_l_english.yml
@@ -6,11 +6,11 @@
  prussia.2.b:0 "Re-Unification Is Not The Answer!"
  prussia.17.t:0 "A New Furher!" 
  prussia.17.d:0 "We are united! We are strong once again! It is time we choose our new leader, the leader of the German people. As Kaiser Wilhelm II is old, he cannot take the rule. Two most popular political figures in Prussia at this moment are Wilhelm the Third and Hermann Goring."
- prussia.17.a:0 "Kaiser Wilhelm III"
- prussia.17.b:0 "Hermann Goring"
- prussia.3.t:0 "Germany Demands Saar"
+ prussia.17.a:0 "카이저 빌헬름 III"
+ prussia.17.b:0 "헤르만 괴링"
+ prussia.3.t:0 "독일이 자르를 요구하다"
  prussia.3.d:0 "Germany has annouced its ambitions to restore its borders. They want Saarland and Moseland back."
- prussia.3.a:0 "Cede Saarland"
+ prussia.3.a:0 "자르를 넘겨라"
  prussia.3.b:0 "No way!"
  prussia.4.t:0 "France cedes"
  prussia.4.d:0 "French officials annouced that they will cede Saarland. Time to restore our glorious Empire!"
@@ -212,15 +212,15 @@ GER_expand_wall:0 "New Decisions will be available to upgrade the Forts"
 
 
   #New events
-  prussia_homeland.1.t:0 "Hans von Seeckt Dies!"
-  prussia_homeland.1.d:0 "Earlier today the Leader of the Prussian people was found in his residence outside Berlin. He had passed away at the age of 70.\n\nHans von Seeckt has taken power of Prussia following German's defeat in the Weltkrieg forming a military state of Prussia. Since then the Kingdom has been on a recovery path.\n\nHans von Seeckt was known for his conservative views of the Prussian future. With his death, the people of Prussia might finally go in a different direction... His successor, August von Mackensen is expected to take his post next week."  
-  prussia_homeland.1.a:0 "Bad News!"
+  prussia_homeland.1.t:0 "한스 폰 젝트의 서거!"
+  prussia_homeland.1.d:0 "오늘 아침 일찍, 프로이센인의 지도자는 베를린 외곽의 그의 거주지에서 사망한 채로 발견되었다. 그는 70세의 나이로 세상을 떠났다.\n\n한스 폰 젝트는 프로이센의 군사 국가를 형성하고 있는 독일군이 세계 대전에서 패한 후 프로이센의 권력을 장악했다. 그 이후로 프로이센 왕국은 회복의 길을 걸었다.\n\n한스 폰 젝트는 프로이센의 미래에 대한 보수적인 견해로 잘 알려져 있었다. 그의 죽음으로 프로이센 사람들은 마침내 다른 방향으로 갈지도 모른다... 그의 후계자인 아우구스트 폰 마켄센이 다음 주에 그의 직책을 맡을 것으로 예상된다."  
+  prussia_homeland.1.a:0 "나쁜 소식이다!"
   
-  prussia_homeland.2.t:0 "Prussian Dictator Dies!"
-  prussia_homeland.2.d:0 "Earlier today the Leader of the Prussian people was found in his residence outside Berlin. He had passed away at the age of 70.\n\nHans von Seeckt has taken power of Prussia following German's defeat in the Weltkrieg forming a military state of Prussia. Since then the Kingdom has been on a recovery path.\n\nHans von Seeckt was known for his conservative views of the Prussian future. With his death, the people of Prussia might finally go in a different direction... His successor, August von Mackensen is expected to take his post next week."
-  prussia_homeland.2.a:0 "Interesting..."
-  prussia_homeland.2.b:0 "Bad News!"
-  prussia_homeland.2.c:0 "Good thing he's dead!"
+  prussia_homeland.2.t:0 "프로이센 독재자의 죽음!"
+  prussia_homeland.2.d:0 "오늘 아침 일찍, 프로이센인의 지도자는 베를린 외곽의 그의 거주지에서 사망한 채로 발견되었다. 그는 70세의 나이로 세상을 떠났다.\n\n한스 폰 젝트는 프로이센의 군사 국가를 형성하고 있는 독일군이 세계 대전에서 패한 후 프로이센의 권력을 장악했다. 그 이후로 프로이센 왕국은 회복의 길을 걸었다.\n\n한스 폰 젝트는 프로이센의 미래에 대한 보수적인 견해로 잘 알려져 있었다. 그의 죽음으로 프로이센 사람들은 마침내 다른 방향으로 갈지도 모른다... 그의 후계자인 아우구스트 폰 마켄센이 다음 주에 그의 직책을 맡을 것으로 예상된다."
+  prussia_homeland.2.a:0 "흥미롭군..."
+  prussia_homeland.2.b:0 "나쁜 소식이다!"
+  prussia_homeland.2.c:0 "그가 죽어서 정말 다행이다!"
   
   prussia_homeland.3.t:0 "Elections in Germany"
   prussia_homeland.3.d:0 "Following Hans von Seeckt death, the people of Germany now face elections for the first time since the end of the Great War.\n\nThe future of Germany is dependent on this election. A large part of German population wishes the return of Kaiser to the Reichstag meanwhile the others wish for peaceful and liberal government, perhaps a move towards constitutional monarchy in Germany.\n\nWithout a doubt, these elections will be one of the most important elections of the 20th century so far..."
