--- a/localisation/ger_ideas_l_english.yml
+++ b/localisation/ger_ideas_l_english.yml
@@ -1,44 +1,44 @@
 ﻿l_english:
-  GER_wilhelm_II:0 "Kaiser Wilhelm II"
-  GER_wilhelm_III:0 "Crown Prince Wilhelm III"
-  GER_idea_nationalism:0 "German Nationalism"
-  GER_passive_army:0 "Defense Army"
+  GER_wilhelm_II:0 "카이저 빌헬름 II"
+  GER_wilhelm_III:0 "황태자 빌헬름 III"
+  GER_idea_nationalism:0 "독일 민족주의"
+  GER_passive_army:0 "방위군"
   GER_german_paramilitarism:0 "Schwarze Reichswehr"
   GER_taxes:0 "Increased Tarifs"
   GER_polish_people:0 "Polish Immigrants"
-  GER_youth_army:0 "Prussian Youth"
-  GER_no_german_nobility:0 "Dissolved Nobility"
-  GER_germ_federation:0 "German Federation"
-  GER_lib_market:0 "Universal Sufferage"
-  GER_centralism_idea:0 "Centralism"
-  GER_ger_monarchy:0 "German Monarchy"
-  GER_r_trade:0 "Right Trade"
-  ger_veteran_army:0 "Veteran Army"
-  ger_army_innov:0 "German Army Innovations"
-  general_staff:0 "Centralized Command"
-  GER_air_innovations_2_idea:0 "German Air Innovations"
-  GER_revenge:0 "Revanchist Propaganda"
-  GER_influence_us:0 "Foreign Nationalist Influence"
-  GER_rep:0 "Republican State"
-  GER_bastion_demo:0 "Bastion of Democracy"
-  GER_german_legacy:0 "German Legacy"
-  ger_walter_idea:0 "Walter Model"
-  GER_messerschmitt:0 "Messerschmitt"
-  GER_prof_army:0 "Professional Force"
-  GER_air_innovations_1_idea:0 "Air Innovations"
-  GER_economic_boom:0 "Economic Boom"
-  GER_blitz_krieg:0 "The Blitzkrieg"
+  GER_youth_army:0 "프로이센 청년단"
+  GER_no_german_nobility:0 "귀족 해체"
+  GER_germ_federation:0 "독일 연방"
+  GER_lib_market:0 "보편적 고통 분담"
+  GER_centralism_idea:0 "중도주의"
+  GER_ger_monarchy:0 "독일 군주정"
+  GER_r_trade:0 "우파 통상"
+  ger_veteran_army:0 "베테랑 군대"
+  ger_army_innov:0 "독일 육군 개혁"
+  general_staff:0 "중앙집중 지휘"
+  GER_air_innovations_2_idea:0 "독일 공군 개혁"
+  GER_revenge:0 "보복주의 선전"
+  GER_influence_us:0 "외국 국가주의 영향"
+  GER_rep:0 "공화국"
+  GER_bastion_demo:0 "민주주의의 보루"
+  GER_german_legacy:0 "독일 유산"
+  ger_walter_idea:0 "발터 모델"
+  GER_messerschmitt:0 "메서슈미트"
+  GER_prof_army:0 "직업 군대"
+  GER_air_innovations_1_idea:0 "공군 개혁"
+  GER_economic_boom:0 "경제 호황"
+  GER_blitz_krieg:0 "전격전"
   GER_washington_treaty:0 "Restrictions of the Washington Treaty"
   GER_washington_treaty_desc:0 "After the Great War, a great effort was made to prevent the dreadnought race between Japan, the United States, Russia and the United Kingdom. It also restricted Prussian navy size. The Kaiserliche Marine was allowed to maintain 2 battleships; the Bayern and the Schleswig-Holstein."
   GER_naval_revival_tt:0 "Germany will revive its old reserve fleet consisting of 1 Battleship, 3 Heavy Cruisers, 6 Light Cruisers and 3 Destroyers!"
   GER_scharnhorst_programme:0 "Niederdeutschland and Prussia will gain 1 battleship each. If Niederdeutschland is annexed, Prussia will gain 2 battleships."
-  konig_pact_idea:0 "Königlicher Pakt"
-  konig_pact_idea_desc:0 "A pact that will benefit both people of Germany and Russia to achieve peace and harmony."
- ideology_boosting_decisions:0 "Increasing the Rulling Party Support"
- ideology_boosting_decisions_desc:0 "In case our ruling party is struggling to maintain majority in our country, we could use a little boost to our popularity."
- ideology_boosting_neutrality:0 "Increase Autocracy Popularity"
- ideology_boosting_conservatives:0 "Increase Conservatives Popularity"
- ideology_boosting_socialist:0 "Increase Socialism Popularity"
- ideology_boosting_democratic:0 "Increase Liberalism Popularity"
- ideology_boosting_fascism:0 "Increase Nationalism Popularity"
- ideology_boosting_communism:0 "Increase Communism Popularity"
+  konig_pact_idea:0 "쾨니히 조약"
+  konig_pact_idea_desc:0 "독일과 러시아 모두에게 평화와 화합을 이루기 위해 혜택을 줄 협약이다."
+ ideology_boosting_decisions:0 "여당 지원 확대"
+ ideology_boosting_decisions_desc:0 "여당이 다수당의 지위를 유지하기 위해 고군분투하고 있다면 인기에 조금이나마 힘을 실어줄 수 있을 것이다."
+ ideology_boosting_neutrality:0 "전제주의 인기도 증가"
+ ideology_boosting_conservatives:0 "보수주의 인기도 증가"
+ ideology_boosting_socialist:0 "사회주의 인기도 증가"
+ ideology_boosting_democratic:0 "자유주의 인기도 증가"
+ ideology_boosting_fascism:0 "국가주의 인기도 증가"
+ ideology_boosting_communism:0 "공산주의 인기도 증가"
