--- a/localisation/rus_ideas_l_english.yml
+++ b/localisation/rus_ideas_l_english.yml
@@ -1,150 +1,150 @@
 ﻿l_english:
- RUS_GER_pact:0 "Königspakt"
- RUS_GER_pact_desc:0 "Signed between Russia and Germany, the Königspakt decided the faith of the Central Europe and the region of Balkans."
- RUS_imperial_navy:0 "Russian Imperial Navy"
- RUS_poor_infrastructure:0 "Poor Infrastructure"
- RUS_victorious_ww1:0 "Victors of the Great War"
- RUS_fortification_focus:0 "Fortification Effort"
- Grand_Duke_Kirill_Vladimirovich:0 "Grand Duke Kirill Vladimirovich"
- RUS_national_unrest:0 "National Unrest"
- RUS_peasant_unrest:0 "Diverse Nation"
- RUS_sleeping_giant:0 "Sleeping Giant"
- RUS_path_of_order:0 "Russian Nationalism"
- RUS_towards_democracy:0 "Russian Democracy"
- RUS_colonial_power:0 "Colonial Power"
- RUS_tsar_nicolas:0 "Tsar Nicolas II The Victorious"
- RUS_great_patriotic_war:0 "Socialism In One Country"
- RUS_tsar_kirill:0 "Tsar Kirill Vladimirovich"
- RUS_tsar_boris:0 "Tsar Boris Vladimirovich"
- RUS_tsar_alexander:0 "Tsar Alexander Mihailovich"
- RUS_republic:0 "Russian Republic"
- RUS_church:0 "Russian Orthodox Church"
- RUS_russian_monarchy:0 "House of Romanov"
- RUS_provisional_government:0 "Provisional Government"
- RUS_stolypin_reform:0 "Stolypin Reform"
- RUS_okhranka:0 "Okhranka Secret Police"
- RUS_agricole_power:0 "Agricultural Power"
- RUS_private:0 "Privatization"
- RUS_state_run:0 "State Run Economy"
- RUS_expanded_navy:0 "Admiralty Verf"
- RUS_aeroflot_idea:0 "Aeroflot"
- RUS_front_line:0 "Frontline Officers"
- RUS_elite_idea:0 "Russian Elite"
- RUS_everyone_edu:0 "Educated Society"
- RUS_mass_pro:0 "Mass Production"
- RUS_russification:0 "Russification"
- RUS_multinational_society:0 "Diverse Society"
- RUS_cinema:0 "State Run Cinema"
- RUS_general_staff:0 "Staraya Gvardiya" #New 
- RUS_general_staff_desc:0 "Despite the fact that the Great War has been long gone, the Russian Army maintains similar military system that defeated the German and Austrian armies in 1917. Yet it is outdated, has its flaws and employs obsolete doctrines."
- RUS_general_staff_1:0 "Early Stage of Modernization"
- RUS_general_staff_2:0 "Second Stage of Modernization"
- RUS_general_staff_3:0 "Final Stage of Modernization"
- RUS_general_staff_4:0 "Novaya Gvardiya"
- RUS_general_staff_political_intermediate:0 "Politically Connected General Staff"
- RUS_general_staff_political:0 "Politically Connected General Staff"
- RUS_cult_of_sci:0 "Cult of Science"
- RUS_restored_empire:0 "For the Motherland!"
- RUS_polish_nationalism:0 "Polish Nationalism"
- RUS_july_strikes:0 "Major Strikes"
- RUS_negociated_strikes:0 "Moscow Accords"
- RUS_alaska_purchase_rus:0 "Alaska Purchase"
- RUS_alaska_purchase_usa:0 "Sale of Alaska"
- RUS_tank_equipment_bonus:0 "Expanded Armor Production"
- RUS_inf_equipment_bonus:0 "Expanded Rifle Production"
- RUS_militarism_focus:0 "Russian Militarism Programme"
- russian_sanctions_idea:0 "Russian Economic Sanctions"
- RUS_wargoal_sphere_idea:0 "Russian Sphere of Influence"
- RUS_bukhara_integration:0 "Integration of Bukhara Region"
+ RUS_GER_pact:0 "쾨니히 조약"
+ RUS_GER_pact_desc:0 "러시아와 독일 사이에 서명된 쾨니히 조약은 중앙유럽과 발칸 지역의 신뢰를 결정지었다."
+ RUS_imperial_navy:0 "러시아 제국 해군"
+ RUS_poor_infrastructure:0 "형편없는 기반시설"
+ RUS_victorious_ww1:0 "대전쟁의 승리자들"
+ RUS_fortification_focus:0 "요새화 주력"
+ Grand_Duke_Kirill_Vladimirovich:0 "키릴 블라디미로비치 대공"
+ RUS_national_unrest:0 "국가적 불안"
+ RUS_peasant_unrest:0 "다양한 인종"
+ RUS_sleeping_giant:0 "잠자는 거인"
+ RUS_path_of_order:0 "러시아 국가주의"
+ RUS_towards_democracy:0 "러시아 민주주의"
+ RUS_colonial_power:0 "식민 강국"
+ RUS_tsar_nicolas:0 "승리자 차르 니콜라스 II"
+ RUS_great_patriotic_war:0 "일국사회주의"
+ RUS_tsar_kirill:0 "차르 키릴 블라디미로비치"
+ RUS_tsar_boris:0 "차르 보리스 블라디미로비치"
+ RUS_tsar_alexander:0 "차르 알렉산드르 미하일로비치"
+ RUS_republic:0 "러시아 공화국"
+ RUS_church:0 "러시아 정교회"
+ RUS_russian_monarchy:0 "로마노프 가문"
+ RUS_provisional_government:0 "임시정부"
+ RUS_stolypin_reform:0 "스톨리핀 개혁"
+ RUS_okhranka:0 "공안질서수호국"
+ RUS_agricole_power:0 "농업 강국"
+ RUS_private:0 "민영화"
+ RUS_state_run:0 "국가 주도 경제"
+ RUS_expanded_navy:0 "아드미랄티 조선소"
+ RUS_aeroflot_idea:0 "아에로플로트"
+ RUS_front_line:0 "최전선 장교들"
+ RUS_elite_idea:0 "러시아인 엘리트"
+ RUS_everyone_edu:0 "교육사회"
+ RUS_mass_pro:0 "대량 생산"
+ RUS_russification:0 "러시아화"
+ RUS_multinational_society:0 "다문화 사회"
+ RUS_cinema:0 "국가주도 영화 산업"
+ RUS_general_staff:0 "군대 보수파" #New 
+ RUS_general_staff_desc:0 "대전이 끝난 지 오래되었음에도 불구하고 러시아군은 1917년 독일과 오스트리아군을 격파했을 당시와 유사한 군사체제를 유지하고 있다. 하지만 구식이고, 결점투성이이며, 쓸모없는 데도 이 교리를 채용하고 있다."
+ RUS_general_staff_1:0 "초기 현대화"
+ RUS_general_staff_2:0 "중기 현대화"
+ RUS_general_staff_3:0 "최종 현대화"
+ RUS_general_staff_4:0 "군대 개혁파"
+ RUS_general_staff_political_intermediate:0 "정치적으로 연결된 참모단"
+ RUS_general_staff_political:0 "정치적으로 연결된 참모단"
+ RUS_cult_of_sci:0 "과학 추종"
+ RUS_restored_empire:0 "모국을 위하여!"
+ RUS_polish_nationalism:0 "폴란드 국가주의"
+ RUS_july_strikes:0 "대파업"
+ RUS_negociated_strikes:0 "모스크바 협정"
+ RUS_alaska_purchase_rus:0 "알래스카 구매"
+ RUS_alaska_purchase_usa:0 "알래스카 판매"
+ RUS_tank_equipment_bonus:0 "확장된 전차 생산"
+ RUS_inf_equipment_bonus:0 "확장된 보병장비 생산"
+ RUS_militarism_focus:0 "러시아 군국주의 계획"
+ russian_sanctions_idea:0 "러시아 경제 제재"
+ RUS_wargoal_sphere_idea:0 "러시아의 영향권"
+ RUS_bukhara_integration:0 "부하라 지역 통합"
  ####country stuff####
- RUS_vladimir_nabokov:0 "Vladimir Nabokov"
- RUS_alexander_guchkov:0 "Alexander Guchkov"
- RUS_alexander_kolchak:0 "Alexander Kolchak"
- RUS_lavr_kornilov:0 "Lavr Kornilov"
- RUS_anton_denikin:0 "Anton Denikin"
- RUS_paul_von_rennenkampf:0 "Paul Von Rennenkampf"
- RUS_pyotr_wrangel:0 "Pyotr Wrangel"
- alexander_kolchak:0 "Alexander Kolchak"
- RUS_pavel_argeyev:0 "Pavel Argeyev"
- RUS_boris_savinkov:0 "Boris Savinkov"
+ RUS_vladimir_nabokov:0 "블라디미르 나보코프"
+ RUS_alexander_guchkov:0 "알렉산드르 구치코프"
+ RUS_alexander_kolchak:0 "알렉산드르 콜차크"
+ RUS_lavr_kornilov:0 "라브르 코닐로프"
+ RUS_anton_denikin:0 "안톤 데니킨"
+ RUS_paul_von_rennenkampf:0 "파울 폰 레넨캄프"
+ RUS_pyotr_wrangel:0 "표트르 브란겔"
+ alexander_kolchak:0 "알렉산드르 콜차크"
+ RUS_pavel_argeyev:0 "파벨 아르게예프"
+ RUS_boris_savinkov:0 "보리스 사빈코프"
  
  
  #### New Additions####
- sikorsky_design_bureaus:0 "Sikorsky Design Bureau"
- yakovlev_design_bureaus:0 "Yakovlev Design Bureau"
- dux_design_bureaus:0 "Dux Design Bureau"
- blacksea_verf_design_bureaus:0 "Black Sea Shipyard"
- severnaya_verf_design_bureaus:0 "Severnaya Verf"
- admiralty_verf_design_bureaus:0 "Admiralty Shipyard"
- obukhov_state_plants:0 "Obukhov State Plant"
- RUS_wargoal_sphere_idea:0 "Russian Sphere of Influence"
+ sikorsky_design_bureaus:0 "시코르스키 설계국"
+ yakovlev_design_bureaus:0 "야코레프 설계국"
+ dux_design_bureaus:0 "둑스 설계국"
+ blacksea_verf_design_bureaus:0 "흑해 조선소"
+ severnaya_verf_design_bureaus:0 "세베르나야 조선소"
+ admiralty_verf_design_bureaus:0 "아드미랄티 조선소"
+ obukhov_state_plants:0 "오부호프 국영 공장"
+ RUS_wargoal_sphere_idea:0 "러시아의 영향권"
  ####COUNTRY STUFF####
- ilyushin_design_bureaus:0 "Ilyushin Design Bureau"
- tupolev_design_bureaus:0 "Tupolev Design Bureau"
- grabin_design_bureaus:0 "Grabin Design Bureau"
- morozov_design_bureaus:0 "Morozov Design Bureau"
- astrov_design_bureaus:0 "Astrov Design Bureau"
+ ilyushin_design_bureaus:0 "일류신 설계국"
+ tupolev_design_bureaus:0 "투폴레프 설계국"
+ grabin_design_bureaus:0 "그라빈 설계국"
+ morozov_design_bureaus:0 "모로조프 설계국"
+ astrov_design_bureaus:0 "아스트로프 설계국"
  okmos:0 "OKMO"
- stalingrad_tractor_factorys:0 "Tsaritsyn Tractor Factory"
- leningrad_polytechnical_institutes:0 "Petrograd Industrial Institute"
- tula_arms_plants:0 "Tula Arms Plant"
- gazs:0 "GAZ"
- nevskoye_design_bureaus:0 "Nevskoye Design Bureau"
- mikhail_kalinins:0 "Mikhail Kalinin"
- nikita_khrushchevs:0 "Nikita Khrushchev"
- alexander_kerenskys:0 "Alexander Kerensky"
- konstantin_rodzaevskys:0 "Konstantin Rodzaevsky"
- grand_duke_kirill_vladimirovich:0 "Grand Duke Kirill Vladimirovich"
- SOV_vyacheslav_molotovs:0 "Vyacheslav Molotov"
- SOV_nikolai_voznesenskys:0 "Nikolai Voznesensky"
- semyon_timoshenkos:0 "Semyon Timoshenko"
- kliment_voroshilovs:0 "Kliment Voroshilov"
- vasily_bluchers:0 "Vasily Bluchers"
- pyotr_smirnovs:0 "Pyotr Smirnov"
- mikhail_frinovskys:0 "Mikhail Frinovsky"
- nikolay_kuznetsovs:0 "Nikolay Kuzentsov"
- ivan_yumashevs:0 "Ivan Yumashev"
- alexander_novikovs:0 "Alexander Novikov"
- konstantin_vershinins:0 "Kostantin Vershinin"
- yakov_smushkevichs:0 "Yakov Smushkevich"
- pavel_rychagovs:0 "Pavel Rychagov"
- ivan_konevs:0 "Ivan Konev"
- aleksandr_vasilevskys:0 "Aleksandr Vasilevsky"
- konstantin_rokossovskys:0 "Konstantin Rokossovsky"
- pavel_zhigarevs:0 "Pavel Zhigarev"
- sergei_khudyakovs:0 "Sergei Khudyakov"
- stepan_krasovskys:0 "Stepan Krasovskysh"
- vladimir_kasatonovs:0 "Vladimir Kasatonov"
- gordey_levchenkos:0 "Gordey Levchenko"
- arseniy_golovkos:0 "Arseniy Golovko"
- mig_design_bureaus:0 "MIG Design Bureau"
- tupolev_design_bureaus:0 "Tupolev Design Bureau"
- georgy_zhukovs:0 "Georgy Zhukov"
- boris_shaposhnikovs:0 "Boris Shaposhnikov"
- sergey_gorshkovs:0 "Sergey Gorshkov"
- vladimir_tributss:0 "Vladimir Tributs"
- sergei_rudenkos:0 "Sergei Rudenko"
- sergey_gorshkovs:0 "Sergey Gorshkov"
- alexander_golovanovs:0 "Alexander Golovanov"
- igor_kurchatovs:0 "Igor Kurchatovs"
- sergei_korolevs:0 "Sergei Korolev"
+ stalingrad_tractor_factorys:0 "차리친 트랙터 공장"
+ leningrad_polytechnical_institutes:0 "페트로그라드 산업대학교"
+ tula_arms_plants:0 "툴라 군수공장"
+ gazs:0 "가즈(GAZ)"
+ nevskoye_design_bureaus:0 "넵스코예 설계국"
+ mikhail_kalinins:0 "미하일 칼리닌"
+ nikita_khrushchevs:0 "니키타 흐루쇼프"
+ alexander_kerenskys:0 "알렉산드르 케렌스키"
+ konstantin_rodzaevskys:0 "콘스탄틴 로자옙스키"
+ grand_duke_kirill_vladimirovich:0 "키릴 블라디미로비치 대공"
+ SOV_vyacheslav_molotovs:0 "뱌체슬라프 몰로토프"
+ SOV_nikolai_voznesenskys:0 "니콜라이 보즈네센스키"
+ semyon_timoshenkos:0 "세묜 티모셴코"
+ kliment_voroshilovs:0 "클리멘트 보로실로프"
+ vasily_bluchers:0 "바실리 블류헤르"
+ pyotr_smirnovs:0 "표트르 스미르노프"
+ mikhail_frinovskys:0 "미하일 프리놉스키"
+ nikolay_kuznetsovs:0 "니콜라이 쿠즈네초프"
+ ivan_yumashevs:0 "이반 유마셰프"
+ alexander_novikovs:0 "알렉산드르 노비코프"
+ konstantin_vershinins:0 "콘스탄틴 베르시닌"
+ yakov_smushkevichs:0 "야코프 스무시케비치"
+ pavel_rychagovs:0 "파벨 라이차코프"
+ ivan_konevs:0 "이반 코네프"
+ aleksandr_vasilevskys:0 "알렉산드르 바실렙스키"
+ konstantin_rokossovskys:0 "콘스탄틴 로코솝스키"
+ pavel_zhigarevs:0 "파벨 지가레프"
+ sergei_khudyakovs:0 "세르게이 후댜코프"
+ stepan_krasovskys:0 "스테판 크라소브스키"
+ vladimir_kasatonovs:0 "블라디미르 카사토노프"
+ gordey_levchenkos:0 "고르데 레브첸코"
+ arseniy_golovkos:0 "아르세니 골롭코"
+ mig_design_bureaus:0 "MIG 설계국"
+ tupolev_design_bureaus:0 "투폴레프 설계국"
+ georgy_zhukovs:0 "게오르기 주코프"
+ boris_shaposhnikovs:0 "보리스 샤포슈니코프"
+ sergey_gorshkovs:0 "세르게이 고르시코프"
+ vladimir_tributss:0 "블라디미르 트리뷰츠"
+ sergei_rudenkos:0 "세르게이 루덴포"
+ sergey_gorshkovs:0 "세르게이 고르시코프"
+ alexander_golovanovs:0 "알렉산드르 골로바노프"
+ igor_kurchatovs:0 "이고르 쿠르차토프"
+ sergei_korolevs:0 "세르게이 콜로레프"
 
  ########################
- RUS_provisional_government_flag:0 "Provisional Gov. is in Power"
- Mikhail_inagurated:0 "Tsar Mikhail Assumes the Power"
- RUS_russian_coup:0 "Russian Leadership"
- RUS_no_step_back:0 "No Step Back!"
- RUS_kornilovs_affair:0 "Kornilov's Affair"
- RUS_kornilovs_affair_desc:0 "Russian Provisional Gov. has proven to be a fragile regime. General Kornilov plans to exploit this situation and seize the control of the Russian Empire!"
- RUS_nationalization_industry:0 "Nationalized Industry"
- rus_kornilov_dead:0 "Kornilov is Assassinated"
- rus_general:0 "New Russian Government Established"
- rus_gov_is_set_up:0 "The New Russian Government is Established"
- RUS_begin_modernization:0 "The Russian Army will undergo a series of various modernizations which will take approximately 600 days to complete..."
- RUS_keeps_the_old_guard:0 "The Old Guard will not retire, this would boost our political control but sacrifice some fire power."
- RUS_iranian_terrain:0 "Iranian Terrain"
- RUS_iranian_terrain_desc:0 "The Iranian terrain is extremly difficult and hard to invade. The Iranians will use it to their advantage to defeat any invader from the outside."
+ RUS_provisional_government_flag:0 "권력을 장악한 임시 정부"
+ Mikhail_inagurated:0 "권력을 잡은 차르 미하일"
+ RUS_russian_coup:0 "러시아 지도력"
+ RUS_no_step_back:0 "한 발자국도 물러서지 마라!"
+ RUS_kornilovs_affair:0 "코닐로프의 문제"
+ RUS_kornilovs_affair_desc:0 "러시아의 임시 정부는 취약한 정권임이 입증되었다. 코르닐로프 장군은 이 상황을 이용하여 러시아 제국의 지배권을 장악할 계획을 세우고 있다!"
+ RUS_nationalization_industry:0 "국영화된 산업"
+ rus_kornilov_dead:0 "암살된 코닐로프"
+ rus_general:0 "새 러시아 정부 수립"
+ rus_gov_is_set_up:0 "새 러시아 정부 수립"
+ RUS_begin_modernization:0 "러시아 육군은 일련의 다양한 현대화를 겪게 될 것이며, 이 과정을 완료하는 데 대략 600일이 걸릴 것이다."
+ RUS_keeps_the_old_guard:0 "군대 보수파는 은퇴하지 않을 것이다. 이것은 우리의 정치적 지배력을 높여주지만 약간의 화력을 희생시킬 것이다."
+ RUS_iranian_terrain:0 "이란 지형"
+ RUS_iranian_terrain_desc:0 "이란의 지형은 극도로 어렵고 침략하기 어렵다. 이란인들은 외부로부터의 침략자들을 물리치기 위해 그것을 이용할 것이다."
 
  #Decisions
- RUS_army_actions:0 "Army Actions"
- RUS_no_step_back_decision:0 "Issue No Step Back Order!"
+ RUS_army_actions:0 "군사적 행동"
+ RUS_no_step_back_decision:0 "후퇴 절대 금지 명령!"
