--- a/localisation/tur_ideas_l_english.yml
+++ b/localisation/tur_ideas_l_english.yml
@@ -1,45 +1,45 @@
 ﻿l_english:
- TUR_communal_space:0 "Communal Living"
+ TUR_communal_space:0 "공동체 생활"
  TUR_disjointed_nation:0 "Disjointed Nation"
- TUR_disjointed_nation_desc:0 "The 'Father Of The Turkish Nation' has failed his people and left them distraught with his failed reforms and continual with the Russian government. Our people look for a new leader and will not be satisfied till we have one..."
- TUR_minority_partisans:0 "Minority Partisans"
- TUR_minority_partisans_desc:0 "Our country is plauged by minority partisan funded by the Russian government. They terrorize the population and steal our resources! We must put a stop to this..."
- TUR_expand_farming:0 "Expanded Farming Industry"
- TUR_live_with_land:0 "Live With The Land"
- TUR_eternal_state:0 "The Eternal State"
- TUR_industrial_nation:0 "Industrailized State"
- TUR_sharia_law:0 "Sharia Law"
- TUR_jihad:0 "Jihad"
- TUR_muslim_nationalism:0 "Muslim Nationalism"
- TUR_janisarries:0 "Janisarries"
- TUR_jizya:0 "Forced Millets To Pay Jizya"
+ TUR_disjointed_nation_desc:0 "'터키의 아버지'는 개혁에 실패하여 국민들을 혼란스럽게 했고 러시아 정부와의 끊임없는 연계를 가졌다. 우리 민족은 새로운 지도자를 찾고 있고, 적절한 사람을 세울 때까지 만족하지 않을 것이다..."
+ TUR_minority_partisans:0 "소수의 파르티잔"
+ TUR_minority_partisans_desc:0 "우리 나라는 러시아 정부의 자금 지원을 받는 소수 당파에 의해 지배되고 있다. 그들은 인구를 공포에 떨게 하고 우리의 자원을 훔친다! 우리는 이것을 멈춰야 한다..."
+ TUR_expand_farming:0 "농공업 확대"
+ TUR_live_with_land:0 "토지를 감수하다"
+ TUR_eternal_state:0 "영원한 국가"
+ TUR_industrial_nation:0 "산업화 국가"
+ TUR_sharia_law:0 "샤리아법"
+ TUR_jihad:0 "지하드"
+ TUR_muslim_nationalism:0 "무슬림 민족주의"
+ TUR_janisarries:0 "예니체리"
+ TUR_jizya:0 "밀레트에게 지즈야 강요"
  ###########################
- BAV_genossenwall_tt:0 "Adds §YLevel 3 Land Forts§! Across The Northern Border."
-  BAV_rus_mil_tt:0 "Deploys §Y5 Russian Militas§! In Munich."
-  BAV_sonder_tt:0 "Deploys §Y3 Motorized Divisons§! In Munich."
-  BAV_rhine_indus_tt:0 "§RYou Must Own The Rhineland For The Effects To Show§!."
-  BAV_wut_indus_tt:0 "§RYou Must Own Wurttemberg For The Effects To Show§!."
-  BAV_sonder_tt:0 "Deploys §Y3 Motorized Divisons§! In Munich."
-  BAV_bol_generals_tt:0 "Adds §Y1 New General§! To Your Army."
-  GER_westwall_tt:0 "Builds Forts On the French Border"
-  BAV_west_wall_tt:0 "Builds West Wall"
-  BAV_east_wall_tt:0 "Builds Ost Wall"
-  BAV_support_CSA_tool_tt:0 "This might spark a civil war in United States..."
-  BAV_wsm_indus_tt:0 "§RYou Must Own Niederdeutschland For The Effects To Show§!."
-  RUS_jap_treaty:0 "Has Treaty with Japan"
-  garner_pre:0 "Garner Elected"
-  alf_landon_pre:0 "Alf Landon Elected"
-  GER_united_germany:0 "Reunited"
-  GER_is_reuniting:0 "Claimed Germany"
-  RUS_women_squad_tt:0 "Russia§ will receive the legendary Women's Squad of Death!"
-  TUR_this_will_leave_turkey_to_die:0 "RThis Decision will leave Turks to face Russia alone§!."
-  TUR_france_cannot_back_turkey_alone:0 "YFrance will not back §YTurkey§ without our support."
-  TUR_this_will_end_the_war:0 "§RTsargrad will be lost for now§."
-  TUR_might_cause_majors_to_join:0 "§RMajor powers might guarantee Turkish independence§. "
-  rus_general:0 "Consolidated Power"
-  rus_agricole:0 "Agricultural Planning"
-  rus_liberal_eco:0 "Liberalization Planning"
-  rus_industrialization:0 "Industrialization Planning"
-  rus_controlled_indus:0 "Centralization Planning"
-  RUS_conservative_coalition_wins:0 "Conservative Coalition Wins"
-  RUS_new_duma_elected:0 "New Duma is Elected"
+ BAV_genossenwall_tt:0 "북부 국경에 §Y3단계 지상 요새§!를 추가합니다."
+  BAV_rus_mil_tt:0 "뮌헨에 §Y5 러시아 민병대 사단§!을 배치합니다."
+  BAV_sonder_tt:0 "뮌헨에 §Y3 차량화사단§!을 배치합니다."
+  BAV_rhine_indus_tt:0 "§R라인란트를 점유하고 있어야 그 효과를 볼 수 있습니다§!."
+  BAV_wut_indus_tt:0 "§R뷔템베르크를 점유하고 있어야 그 효과를 볼 수 있습니다§!."
+  BAV_sonder_tt:0 "뮌헨에 §Y3 차량화사단§!을 배치합니다."
+  BAV_bol_generals_tt:0 "군대에 §Y장군 한 명§!을 추가합니다."
+  GER_westwall_tt:0 "프랑스 국경에 요새 건설"
+  BAV_west_wall_tt:0 "서부 장벽 건설"
+  BAV_east_wall_tt:0 "동부 장벽 건설"
+  BAV_support_CSA_tool_tt:0 "이것은 미국에서 내전을 일으킬지도 모릅니다..."
+  BAV_wsm_indus_tt:0 "§R저지 독일을 점유하고 있어야 그 효과를 볼 수 있습니다§!."
+  RUS_jap_treaty:0 "일본과의 조약"
+  garner_pre:0 "가너 선출"
+  alf_landon_pre:0 "알프 랜던 선출"
+  GER_united_germany:0 "재통일"
+  GER_is_reuniting:0 "독일 수복"
+  RUS_women_squad_tt:0 "§G러시아는 전설적인 여성 죽음의 사단을 받게 될 것입니다!§!"
+  TUR_this_will_leave_turkey_to_die:0 "R이 결정은 터키인들이 홀로 러시아를 상대하게 할 것입니다§!."
+  TUR_france_cannot_back_turkey_alone:0 "Y프랑스는 우리의 지원 없이는 §Y터키§를 지지하지 않을 것입니다."
+  TUR_this_will_end_the_war:0 "§R차르그라드를 당분간 길을 잃게 될 것입니다§."
+  TUR_might_cause_majors_to_join:0 "§R주요 강대국들은 터키의 독립을 보장할 수도 있습니다§."
+  rus_general:0 "통합된 권력"
+  rus_agricole:0 "농업 계획"
+  rus_liberal_eco:0 "자유화 계획"
+  rus_industrialization:0 "산업화 계획"
+  rus_controlled_indus:0 "중앙집중화 계획"
+  RUS_conservative_coalition_wins:0 "보수당 연합 승리"
+  RUS_new_duma_elected:0 "새 두마 선출"
