--- a/localisation/INOT_diplomacy_l_english.yml
+++ b/localisation/INOT_diplomacy_l_english.yml
@@ -16,15 +16,15 @@
   RUS_bad_anglo_russo:0 "Refused Non-Aggression"
   renewed_1920:0 "Renewed 1920 Agreement"
   ger_diplo_mission:0 "German Diplomatic Mission"
-  democratic_leanings:0 "Democracy in Germany"
+  democratic_leanings:0 "독일의 민주주의"
   Zollverein_mod:0 "Modern Zollverein"
   ger_anti_rus_policy:0 "Anti-Russian Propoganda"
   sided_with_allies:0 "Sided with the West"
-  rus_russian_revolution:0 "European Revolution!"
+  rus_russian_revolution:0 "유럽 혁명!"
   GER_accept_british_naval_dominance_opinion:0 "Accept British Naval Dominance"
-  Konig_pact:0 "König Pakt"
-  balkan_expansion:0 "Balkan Policy"
-  bel_diplo_mission:0 "Belgian Diplomatic Mission"
+  Konig_pact:0 "쾨니히 조약"
+  balkan_expansion:0 "발칸 정책"
+  bel_diplo_mission:0 "벨기에 외교 사절"
   ceased_trade_opinion:0 "Ceased Trade"
   agreed_ceased_trade_opinion:0 "Agreed to Cease the Trade with the Germans"
   refused_ceased_trade_opinion:0 "Refused to Cease Trade with the Germans"
