--- a/localisation/autonomy_l_english.yml
+++ b/localisation/autonomy_l_english.yml
@@ -1,68 +1,68 @@
-﻿l_english:
- autonomy_dominion:0 "Dominion"
- autonomy_supervised_state:0 "Supervised State"
- autonomy_colony:0 "Colony"
- autonomy_puppet:0 "Puppet"
- autonomy_integrated_puppet:0 "Integrated Puppet"
- autonomy_annex:0 "Annexed"
- autonomy_free:0 "Free"
- autonomy_reichskommissariat:0 "Reichskommissariat"
- autonomy_reichsprotectorate:0 "Reichsprotectorate"
- autonomy_satellite:0 "Satellite"
- autonomy_wtt_imperial_associate:0 "Imperial Associate"
- autonomy_wtt_imperial_protectorate:0 "Imperial Protectorate"
- autonomy_wtt_imperial_subject:1 "Imperial Subject"
- autonomy_collaboration_government:0 "Collaboration Government"
- AUTONOMY_CAN_TAKE_DESC:1 "$OWNER|UH$ can become a $NEXTLEVEL|H$"
- AUTONOMY_CANT_TAKE_DESC:1 "$OWNER|UH$ can not become a $NEXTLEVEL|H$ yet"
- AUTONOMY_CAN_LOSE_DESC:1 "$OWNER|UH$ can be reduced to a $PREVLEVEL|H$"
- AUTONOMY_CANT_LOSE_DESC:1 "$OWNER|UH$ can not be reduced to a $PREVLEVEL|H$ yet"
- AUTONOMY_CHANGE_TO_DESC:1 "$OWNER|UH$ will become a $LEVEL|H$"
- AUTONOMY_MOVING_DESC:1 "§GChange autonomy level to a $LEVEL|H$§!"
- AUTONOMY_CURR_DESC:0 "Currently $COUNTRY|H$ is a $LEVEL|H$"
- AUTONOMY_PROGRESS_DESC:1 "$OWNER|UH$ has £autonomy_texticon $CURRENT|H0$/$TOTAL|H0$ points until being able to become $NEXTLEVEL|H$"
- AUTONOMY_PROGRESS_PREV_DESC:1 "$OWNER|UH$ has $CURRENT|H0$ points too many to be reduced to $PREVLEVEL|H$"
- AUTONOMY_RELATION_DESC:1 "$SUBJECT|UH$ is a $LEVEL|H$ of $MASTER|H$"
- AUTONOMY_RELATION_DESC2:1 "$SUBJECT|UH$ is a $LEVEL|H$ of a foreign power"
- AUTONOMY_COUNTRY_EFFECT:0 "Country"
- AUTONOMY_MASTER_COUNTRY_EFFECT:0 "Master"
- SHOW_SUBJECTS_DESC:0 "Open subjects view"
- SHOW_SUBJECTS_DISABLED_DESC:0 "§RWe don't have any subjects to display§!"
- MANAGE_SUBJECTS_HEADER:0 "Subjects"
+﻿ l_english:
+ autonomy_dominion:0 "자치령"
+ autonomy_supervised_state:0 "피감독국"
+ autonomy_colony:0 "식민지"
+ autonomy_puppet:0 "괴뢰국"
+ autonomy_integrated_puppet:0 "통합 괴뢰국"
+ autonomy_annex:0 "합병됨"
+ autonomy_free:0 "자주국"
+ autonomy_reichskommissariat:0 "국가판무관부"
+ autonomy_reichsprotectorate:0 "국가보호령"
+ autonomy_satellite:0 "위성국"
+ autonomy_wtt_imperial_associate:0 "제국 제휴령"
+ autonomy_wtt_imperial_protectorate:0 "제국 보호령"
+ autonomy_wtt_imperial_subject:1 "제국 속령"
+ autonomy_collaboration_government:0 "협력정부"
+ AUTONOMY_CAN_TAKE_DESC:1 "$OWNER|UH$(은)는 $NEXTLEVEL|H$(이)가 될 수 있습니다"
+ AUTONOMY_CANT_TAKE_DESC:1 "$OWNER|UH$(은)는 아직 $NEXTLEVEL|H$(이)가 될 수 없습니다"
+ AUTONOMY_CAN_LOSE_DESC:1 "$OWNER|UH$(은)는 $PREVLEVEL|H$(으)로 하락될 수 있습니다"
+ AUTONOMY_CANT_LOSE_DESC:1 "$OWNER|UH$(은)는 아직 $PREVLEVEL|H$(으)로 하락될 수 없습니다"
+ AUTONOMY_CHANGE_TO_DESC:1 "$OWNER|UH$(은)는 곧 $LEVEL|H$(이)가 될 것입니다"
+ AUTONOMY_MOVING_DESC:1 "§G자치도 수준을 $LEVEL|H$(으)로 변경합니다§!"
+ AUTONOMY_CURR_DESC:0 "현재 $COUNTRY|H$(은)는 $LEVEL|H$ 입니다"
+ AUTONOMY_PROGRESS_DESC:1 "$OWNER|UH$(은)는 $NEXTLEVEL|H$(이)가 되기까지 £autonomy_texticon $CURRENT|H0$/$TOTAL|H0$ 만큼 남았습니다"
+ AUTONOMY_PROGRESS_PREV_DESC:1 "$OWNER|UH$(은)는 $PREVLEVEL|H$(으)로 낮추기에 $CURRENT|H0$ 만큼 많습니다"
+ AUTONOMY_RELATION_DESC:1 "$SUBJECT|UH$(은)는 $MASTER|H$의 $LEVEL|H$입니다"
+ AUTONOMY_RELATION_DESC2:1 "$SUBJECT|UH$(은)는 외세의 $LEVEL|H$입니다"
+ AUTONOMY_COUNTRY_EFFECT:0 "국가"
+ AUTONOMY_MASTER_COUNTRY_EFFECT:0 "종주국"
+ SHOW_SUBJECTS_DESC:0 "종속국 화면 보기"
+ SHOW_SUBJECTS_DISABLED_DESC:0 "§R우린 어떤 종속국도 가지고 있지 않습니다§!"
+ MANAGE_SUBJECTS_HEADER:0 "종속국"
  CONTINUOUS_AUTONOMY_EFFECT:0 "$REASON$: £autonomy_texticon $VAL|+=2$"
  EVENT_AUTONOMY_EFFECT:0 "$REASON$: £autonomy_texticon $VAL|+=2$"
- LL_TO_OVERLORD_FREEDOM_EFFECT:0 "Subject lend leasing to overlord"
- LL_TO_PUPPET_FREEDOM_EFFECT:0 "Overlord lend leasing to subject"
+ LL_TO_OVERLORD_FREEDOM_EFFECT:0 "종속국이 종주국에 무기 지원"
+ LL_TO_PUPPET_FREEDOM_EFFECT:0 "종주국이 종속국에 무기 지원"
  MONTHLY_LL_FREEDOM_TO_PUPPET:0 "$FLAG$ $VALUE|-2$"
  MONTHLY_LL_FREEDOM_TO_MASTER:0 "$VALUE|+2$"
- MONTHLY_LL_FREEDOM_VALUE_DESC:0 "Monthly impact on autonomy in case of full delivery"
- MONTHLY_LL_FREEDOM_DESC:0 "Monthly after full delivery $COUNTRY|H$ gets £autonomy_texticon $VALUE|+=2$ "
- MONTHLY_REQUEST_LL_TO_MASTER:0 "§RRequesting lend lease from puppet can give them more autonomy§!"
- MONTHLY_REQUEST_LL_TO_PUPPET:0 "§RRequesting lend lease from master might lose autonomy§!"
- EXPORT_FREEDOM_EFFECT:0 "Subject exporting to overlord"
- WAR_SCORE_FREEDOM_EFFECT:0 "Subject contributed war score"
- EFFECT_FREEDOM_EFFECT:0 "Subject received"
- ACTIVE_ATTACHES_EFFECT:0 "Active Attaches"
- MASTER_SURRENDER_FREEDOM_EFFECT:0 "Master capitulated"
- MISSING_AUTONOMY_SCORE:0 "Need £autonomy_texticon $VAL|2Y$ more autonomy"
- TOO_MUCH_AUTONOMY_SCORE:0 "Has $VAL|2Y$ too much autonomy"
- AUTONOMY_CHANGE_COST:1 "Cost (£pol_power ): $VALUE$"
- AUTONOMY_FREEDOM_PROMOTE_COST:0 "Need £autonomy_texticon $SCORE|H0$ more to promote to that level"
- AUTONOMY_FREEDOM_DEMOTE_COST:0 "Need £autonomy_texticon $SCORE|H0$ to demote to that level"
- CONTINUOUS_AUTONOMY_EFFECTS:0 "§HContinuous effects on autonomy§!"
- EVENT_AUTONOMY_EFFECTS:1 "§HEffects on autonomy§!"
- ADD_AUTONOMY_SCORE_DESC:0 "Add £autonomy_texticon $VALUE|H2$"
- ADD_AUTONOMY_SCORE_DETAILED_DESC:0 "Add £autonomy_texticon $VALUE|H2$ to the $COUNTRY|H$"
- COLONIAL_FORCES_GENERAL_DESCRIPTION:2 "§GClick to view templates of subjects and Governments in Exile§!\n\nDivisions created with colonial templates can include more manpower from the colony if the colony's autonomy is lowered."
- COLONIAL_FORCES_NO_SUBJECTS:2 "§RWe have no subjects or Governments in Exile we could recruit templates from§!"
- FOREIGN_TEMPLATE_DESC:0 "This is a $COUNTRY|H$ template, which is our subject. We can duplicate template and create colonial forces on its base. Colonial template will use its parent troops, depending on autonomy level."
- COLONIAL_TEMPLATE_DESC:0 "This is $COUNTRY|H$ colonial template. Colonial template will use its parent troops, depending on autonomy level."
- CONSTRUCTION_MASTER_BUILDING_LEVELS:1 "$MASTER|UH$ is currently building $LVL|H$ levels of $BUILDING|H$ for us."
- CONSTRUCTION_MASTER_BUILDING_REDUCE_LEVELS:0 "We are allowed to reduce this construciton level only by $LVL|R$."
- CONSTRUCTION_MASTER_BUILDING_CANT_REDUCE:0 "§RWe are not allowed to reduce the level or cancel this construction.§!"
- CONSTRUCTION_INFO_MASTER:0 "This construction is built on the $WHO|H$ territory. If we don't use all factories, they can contribute using theirs."
- CONSTRUCTION_INFO_SUBJECT:0 "This construction is built for us by the $WHO|H$. If they don't use all factories, we can contribute using ours."
+ MONTHLY_LL_FREEDOM_VALUE_DESC:0 "완전히 운송할 경우 발생할 월별 자치도 영향"
+ MONTHLY_LL_FREEDOM_DESC:0 "전체 배달 후 $COUNTRY|H$(은)는 매월 £autonomy_texticon $VALUE|H+=2$(을)를 얻습니다"
+ MONTHLY_REQUEST_LL_TO_MASTER:0 "§R종속국으로부터 받는 무기 지원은 종속국의 자치도를 올려줍니다§!"
+ MONTHLY_REQUEST_LL_TO_PUPPET:0 "§R종주국으로부터 받는 무기 지원은 종속국의 자치도를 하락시킵니다§!"
+ EXPORT_FREEDOM_EFFECT:0 "종속국이 종주국에 수출"
+ WAR_SCORE_FREEDOM_EFFECT:0 "종속국이 승점에 기여"
+ EFFECT_FREEDOM_EFFECT:0 "종속국이 받아들임"
+ ACTIVE_ATTACHES_EFFECT:0 "이용 가능한 주재무관"
+ MASTER_SURRENDER_FREEDOM_EFFECT:0 "종주국 항복"
+ MISSING_AUTONOMY_SCORE:0 "$VAL|2Y$(은)는 더 많은 £autonomy_texticon  자치도가 필요합니다"
+ TOO_MUCH_AUTONOMY_SCORE:0 "$VAL|2Y$(은)는 너무 많은 자치도를 가졌습니다"
+ AUTONOMY_CHANGE_COST:1 "비용 (£pol_power ): $VALUE$"
+ AUTONOMY_FREEDOM_PROMOTE_COST:0 "해당 수준로 승급하려면 £autonomy_texticon $SCORE|H0$(이)가 더 필요합니다"
+ AUTONOMY_FREEDOM_DEMOTE_COST:0 "해당 수준로 강등하려면 £autonomy_texticon $SCORE|H0$(이)가 필요합니다"
+ CONTINUOUS_AUTONOMY_EFFECTS:0 "§H자치도에 대한 지속적 영향§!"
+ EVENT_AUTONOMY_EFFECTS:1 "§H자치도에 대한 영향§!"
+ ADD_AUTONOMY_SCORE_DESC:0 "£autonomy_texticon£ $VALUE|H2$(을)를 추가"
+ ADD_AUTONOMY_SCORE_DETAILED_DESC:0 "£autonomy_texticon£ $VALUE|H2$(을)를 $COUNTRY|H$에 추가"
+ COLONIAL_FORCES_GENERAL_DESCRIPTION:2 "§G클릭으로 종속국과 망명정부의 편제를 볼 수 있습니다§!\n\n식민지 편제로 창설한 사단은 식민지의 자치도가 낮을수록 더 많은 식민지 인력을 사용합니다."
+ COLONIAL_FORCES_NO_SUBJECTS:2 "§R징병할 수 있는 종속국 또는 망명정부의 편제가 없습니다§!"
+ FOREIGN_TEMPLATE_DESC:0 "이것은 우리 종속국, $COUNTRY|H$의 사단 편제입니다. 우리는 사단 편제를 복제해 기지에 식민군을 만들 수 있습니다. 식민지 편제는 자치도 레벨에 따라, 모체 병력을 사용합니다."
+ COLONIAL_TEMPLATE_DESC:0 "이것은 $COUNTRY|H$의 식민지 편제입니다. 식민지 편제는 자치도 레벨에 따라, 모체 병력을 사용합니다."
+ CONSTRUCTION_MASTER_BUILDING_LEVELS:1 "$MASTER|UH$(이)가 우리를 위해 $BUILDING|H$(을)를 $LVL|H$ 만큼 건설 중입니다."
+ CONSTRUCTION_MASTER_BUILDING_REDUCE_LEVELS:0 "우리는 이 건설 수준을 $LVL|R$ 만큼만 줄일 수 있습니다."
+ CONSTRUCTION_MASTER_BUILDING_CANT_REDUCE:0 "§R우리는 수준을 줄이거나 이 건설을 취소할 수 없습니다.§!"
+ CONSTRUCTION_INFO_MASTER:0 "이 건설은 $WHO|H$ 영역에 건설됩니다. 우리가 모든 공장을 사용하고 있지 않는다면, 그들은 그들의 공장을 사용하여 기여할 수 있습니다."
+ CONSTRUCTION_INFO_SUBJECT:0 "이 건설은 우리를 위해 $WHO|H$에 의해 건설됩니다. 그들이 모든 공장을 사용하지 않는다면, 우리는 우리의 공장을 사용하여 기여할 수 있습니다."
  
 
  ####
- autonomy_satellite_inot:0 "Satellite State"
+ autonomy_satellite_inot:0 "위성국"
