--- a/localisation/bav_ideas_l_english.yml
+++ b/localisation/bav_ideas_l_english.yml
@@ -1,56 +1,56 @@
 ﻿l_english:
- BAV_indus_society:0 "Industrial Society"
- BAV_wor_rev:0 "World Revolution"
- BAV_national:0 "Bavarian Nationalism"
- BAV_blood:0 "Blood and Steel"
- BAV_advisors:0 "Bavarian Advisors"
- BAV_revolts:0 "German Revolts"
- BAV_revolts_desc:0 "After the reunification of Germany, the various groups that formerly ruled are now openly opposing their new regime."
- BAV_Rosa_Luxemburg:0 "Rosa Luxemburg"
- BAV_Kurt_Eisner:0 "Kurt Eisner"
- ottomar_pech:0 "Ottomar Pech"
- heinz_gronau:0 "Heinz Gronau"
- rotstahl:0 "Rotstahl"
- BAV_porsche:0 "Porsche"
- hermann_kohl:0 "Hermann Kohl"
- august_willich:0 "August Willich"
- BAV_socialism_in_1_country:0 "Socialism in One Country"
- BAV_home_of_revolution:0 "Home of the Revolution"
- BAV_s_police:0 "Ministerium fur Staatsicherheit"
- BAV_arrested_opposition:0 "Arrested Opposition"
- BAV_c_economy:0 "Closed Economy"
- BAV_l_economy:0 "Liberal Economy"
- BAV_elite:0 "Bavaria's Elite"
- BAV_everyone_army:0 "Non-Discriminating Army"
- BAV_women_corps:0 "Frauenkorps"
- withdrawal_from_politics:0 "Withdrawal from Foreign Politics"
+ BAV_indus_society:0 "산업화 사회"
+ BAV_wor_rev:0 "세계 혁명"
+ BAV_national:0 "바이에른 민족주의"
+ BAV_blood:0 "철혈"
+ BAV_advisors:0 "바이에른 조언자"
+ BAV_revolts:0 "독일 반란"
+ BAV_revolts_desc:0 "독일 통일 이후, 이전에 지배했던 여러 단체들은 이제 그들의 새로운 정권에 공개적으로 반대하고 있다."
+ BAV_Rosa_Luxemburg:0 "로자 룩셈부르크"
+ BAV_Kurt_Eisner:0 "쿠르트 아이스너"
+ ottomar_pech:0 "오토마르 페흐"
+ heinz_gronau:0 "하인츠 그로나우"
+ rotstahl:0 "로트슈탈"
+ BAV_porsche:0 "포르셰"
+ hermann_kohl:0 "헤르만 콜"
+ august_willich:0 "아우구스트 빌리히"
+ BAV_socialism_in_1_country:0 "일국사회주의"
+ BAV_home_of_revolution:0 "혁명의 고향"
+ BAV_s_police:0 "국가보안부"
+ BAV_arrested_opposition:0 "반대파 체포"
+ BAV_c_economy:0 "폐쇄 경제"
+ BAV_l_economy:0 "자유 경제"
+ BAV_elite:0 "바이에른 엘리트"
+ BAV_everyone_army:0 "차별 없는 군대"
+ BAV_women_corps:0 "여성군단"
+ withdrawal_from_politics:0 "외국정치 철수"
 #########################################################
- BAV_genossenwall_tt:0 "Adds §YLevel 3 Land Forts§! Across The Northern Border."
-  BAV_rus_mil_tt:0 "Deploys §Y5 Russian Militas§! In Munich."
-  BAV_sonder_tt:0 "Deploys §Y3 Motorized Divisons§! In Munich."
-  BAV_rhine_indus_tt:0 "§RYou Must Own The Rhineland For The Effects To Show§!."
-  BAV_wut_indus_tt:0 "§RYou Must Own Wurttemberg For The Effects To Show§!."
-  BAV_sonder_tt:0 "Deploys §Y3 Motorized Divisons§! In Munich."
-  BAV_bol_generals_tt:0 "Adds §Y1 New General§! To Your Army."
-  GER_westwall_tt:0 "Builds Forts On the French Border"
-  BAV_west_wall_tt:0 "Builds West Wall"
-  BAV_east_wall_tt:0 "Builds Ost Wall"
-  BAV_support_CSA_tool_tt:0 "This might spark a civil war in United States..."
-  BAV_wsm_indus_tt:0 "§RYou Must Own Niederdeutschland For The Effects To Show§!."
-  RUS_jap_treaty:0 "Has Treaty with Japan"
-  garner_pre:0 "Garner Elected"
-  alf_landon_pre:0 "Alf Landon Elected"
-  GER_united_germany:0 "Reunited"
-  GER_is_reuniting:0 "Claimed Germany"
-  RUS_women_squad_tt:0 "Russia§ will receive the legendary Women's Squad of Death!"
-  TUR_this_will_leave_turkey_to_die:0 "RThis Decision will leave Turks to face Russia alone§!."
-  TUR_france_cannot_back_turkey_alone:0 "YFrance will not back §YTurkey§ without our support."
-  TUR_this_will_end_the_war:0 "§RTsargrad will be lost for now§."
-  TUR_might_cause_majors_to_join:0 "§RMajor powers might guarantee Turkish independence§. "
-  rus_general:0 "Consolidated Power"
-  rus_agricole:0 "Agricultural Planning"
-  rus_liberal_eco:0 "Liberalization Planning"
-  rus_industrialization:0 "Industrialization Planning"
-  rus_controlled_indus:0 "Centralization Planning"
-  RUS_conservative_coalition_wins:0 "Conservative Coalition Wins"
-  RUS_new_duma_elected:0 "New Duma is Elected"
+ BAV_genossenwall_tt:0 "북부 국경에 §Y3단계 지상 요새§!를 추가합니다."
+  BAV_rus_mil_tt:0 "뮌헨에 §Y5 러시아 민병대 사단§!을 배치합니다."
+  BAV_sonder_tt:0 "뮌헨에 §Y3 차량화사단§!을 배치합니다."
+  BAV_rhine_indus_tt:0 "§R라인란트를 점유하고 있어야 그 효과를 볼 수 있습니다§!."
+  BAV_wut_indus_tt:0 "§R뷔템베르크를 점유하고 있어야 그 효과를 볼 수 있습니다§!."
+  BAV_sonder_tt:0 "뮌헨에 §Y3 차량화사단§!을 배치합니다."
+  BAV_bol_generals_tt:0 "군대에 §Y장군 한 명§!을 추가합니다."
+  GER_westwall_tt:0 "프랑스 국경에 요새 건설"
+  BAV_west_wall_tt:0 "서부 장벽 건설"
+  BAV_east_wall_tt:0 "동부 장벽 건설"
+  BAV_support_CSA_tool_tt:0 "이것은 미국에서 내전을 일으킬지도 모릅니다..."
+  BAV_wsm_indus_tt:0 "§R저지 독일을 점유하고 있어야 그 효과를 볼 수 있습니다§!."
+  RUS_jap_treaty:0 "일본과의 조약"
+  garner_pre:0 "가너 선출"
+  alf_landon_pre:0 "알프 랜던 선출"
+  GER_united_germany:0 "재통일"
+  GER_is_reuniting:0 "독일 수복"
+  RUS_women_squad_tt:0 "러시아§는 전설적인 여성 죽음의 사단을 받게 될 것입니다!"
+  TUR_this_will_leave_turkey_to_die:0 "R이 결정은 터키인들이 홀로 러시아를 상대하게 할 것입니다§!."
+  TUR_france_cannot_back_turkey_alone:0 "Y프랑스는 우리의 지원 없이는 §Y터키§를 지지하지 않을 것입니다."
+  TUR_this_will_end_the_war:0 "§R차르그라드를 당분간 길을 잃게 될 것입니다§."
+  TUR_might_cause_majors_to_join:0 "§R주요 강대국들은 터키의 독립을 보장할 수도 있습니다§."
+  rus_general:0 "통합된 권력"
+  rus_agricole:0 "농업 계획"
+  rus_liberal_eco:0 "자유화 계획"
+  rus_industrialization:0 "산업화 계획"
+  rus_controlled_indus:0 "중앙집중화 계획"
+  RUS_conservative_coalition_wins:0 "보수당 연합 승리"
+  RUS_new_duma_elected:0 "새 두마 선출"
