--- a/localisation/bav_tooltips_l_english.yml
+++ b/localisation/bav_tooltips_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
-  BAV_genossenwall_tt:0 "Adds §YLevel 3 Land Forts§! Across The Northern Border."
-  BAV_rus_mil_tt:0 "Deploys §Y5 Russian Militas§! In Munich."
-  BAV_sonder_tt:0 "Deploys §Y3 Motorized Divisons§! In Munich."
-  BAV_rhine_indus_tt:0 "§RYou Must Own The Rhineland For The Effects To Show§!."
-  BAV_wut_indus_tt:0 "§RYou Must Own Wurttemberg For The Effects To Show§!."
-  BAV_sonder_tt:0 "Deploys §Y3 Motorized Divisons§! In Munich."
-  BAV_bol_generals_tt:0 "Adds §Y1 New General§! To Your Army."
+  BAV_genossenwall_tt:0 "북부 국경에 §Y3단계 지상 요새§!를 추가합니다."
+  BAV_rus_mil_tt:0 "뮌헨에 §Y5 러시아 민병대 사단§!을 배치합니다."
+  BAV_sonder_tt:0 "뮌헨에 §Y3 차량화사단§!을 배치합니다."
+  BAV_rhine_indus_tt:0 "§R라인란트를 점유하고 있어야 그 효과를 볼 수 있습니다§!."
+  BAV_wut_indus_tt:0 "§R뷔템베르크를 점유하고 있어야 그 효과를 볼 수 있습니다§!."
+  BAV_sonder_tt:0 "뮌헨에 §Y3 차량화사단§!을 배치합니다."
+  BAV_bol_generals_tt:0 "군대에 §Y장군 한 명§!을 추가합니다."
   
