--- a/localisation/countries_flags_l_english.yml
+++ b/localisation/countries_flags_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
-  eng_accepts:0 "Has Deal With His Majesty"
-  rus_general:0 "Had General Election
-  FRA_resigned:0 "French Legislative Elections"
-  FRA_leon:0 "Léon Blum is in power"
-  FRA_edouard:0 "Édouard Daladier is in power"
-  FRA_maurice:0 "Maurice Thorez is in power"
-  FRA_flandin:0 "Pierre-Étienne Flandin is in power"
-  jap_accepts:0 "Has Treaty with Japan"
+  eng_accepts:0 "폐하와 거래"
+  rus_general:0 "총선거 열림"
+  FRA_resigned:0 "프랑스 국회의원 선거"
+  FRA_leon:0 "레옹 블룸이 권력을 장악함"
+  FRA_edouard:0 "에두아르 달라디에가 권력을 장악함"
+  FRA_maurice:0 "모리스 토레즈가 권력을 장악함"
+  FRA_flandin:0 "피에르-에티엔 플랑댕이 권력을 장악함"
+  jap_accepts:0 "일본과의 조약 체결"
