--- a/localisation/factions_l_english.yml
+++ b/localisation/factions_l_english.yml
@@ -1,46 +1,24 @@
 ﻿l_english:
- FACTION_LEADER:0 "Faction leader: §Y$COUNTRY$§!"
- FACTION_MEMBER:0 "Faction member: §Y$COUNTRY$§!"
- FACTION_NAME_GER_fascism:0 "Axis"
- FACTION_NAME_GER_none:0 "Axis"
- FACTION_NAME_IDEOLOGY_DEFAULT:0 "Supporters of $IDEOLOGY$"
- french_alliance:0 "French Alliance"
- the_berlin_moscow_axis:0 "The Berlin-Moscow Axis"
- domination_francaise:0 "Domination Française"
- french_entente_alliance:0 "French-Entente Alliance"
- daitoa_kyoeiken:0 "Daitoa Kyoeiken"
- italy_empire_faction:0 "Novus Imperium Romanum"
- chinese_united_front:0 "Chinese United Front"
- miedzymorze_faction:0 "Międzymorze"
- Allies:0 "Allies" #allies version
- Axis:0 "Axis"
- Comintern:0 "Comintern"
- western_pacific_sphere:0 "Western Pacific Sphere"
- south_west_pacific_initiative:0 "The South-West Pacific Initiative"
- north_american_alliance:0 "North-American Alliance"
- northern_sovereignty_coalition:0 "Northern Sovereignty Coalition"
- SAF_faction_uotap:0 "African People's Union"
- ######################################
- eastern_coalition:0 "Vostochniy Soyuz"
- japan_faction:0 "Greater East Asia Co-Prosperity Sphere"
- German_Confederacy:0 "Berliner Pakt"
- berlin_pact:0 "Berliner Pakt"
- pacific_alliance:0 "Pacific Alliance"
- balkan_league:0 "Balkan Shield Force"
- french_empire:0 "Third Internationale"
- central_powers:0 "Central Powers"
- french_entente:0 "European Shield Force"
- nordic_league:0 "North-American Alliance"
- third_internationale:0 "Third International"
- us_north_atlantic_treaty:0 "North Atlantic Treaty"
- us_pacific_faction:0 "Pacific Alliance"
- us_proletarian_alliance:0 "Proletarian Alliance"
- chinese_protection_alliance:0 "Asian League"
- rus_russian_sphere_faction:0 "Russian Sphere"
- rus_second_internationale_faction:0 "Second International"
- western_coalition_faction:0 "Bloc Occidental"
- uk_fourth_internationale_faction:0 "Fourth International"
- uk_imperial_confederation_faction:0 "Imperial Confederation"
- asian_league:0 "Chinese United Front"
- balkan_protection_league:0 "Balkan Protection League"
+ eastern_coalition:0 "동부 연합"
+ japan_faction:0 "대동아공영권"
+ German_Confederacy:0 "베를린 조약"
+ berlin_pact:0 "베를린 조약"
+ pacific_alliance:0 "태평양 동맹"
+ balkan_league:0 "발칸 방어 동맹"
+ french_empire:0 "제3인터내셔널"
+ central_powers:0 "동맹국"
+ french_entente:0 "유럽 보호 동맹"
+ nordic_league:0 "북아프리카 동맹"
+ third_internationale:0 "제3인터내셔널"
+ us_north_atlantic_treaty:0 "북대서양 조약"
+ us_pacific_faction:0 "태평양 동맹"
+ us_proletarian_alliance:0 "프롤레타리아 동맹"
+ chinese_protection_alliance:0 "아시아 연맹"
+ rus_russian_sphere_faction:0 "러시아권"
+ rus_second_internationale_faction:0 "제3인터내셔널"
+ western_coalition_faction:0 "서부 블록"
+ uk_fourth_internationale_faction:0 "제4인터내셔널"
+ uk_imperial_confederation_faction:0 "제국 연합"
+ asian_league:0 "중국 통일전선"
+ balkan_protection_league:0 "발칸 보호 동맹"
 
