--- a/localisation/fra_ideas_l_english.yml
+++ b/localisation/fra_ideas_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
-  FRA_saar_crisis:0 "Saar Tensions"
-  FRA_homeland_defense:0 "Pour la France!"
-  FRA_economy:0 "Economic Intervention"
-  FRA_GER_truce:0 "Armistice"
-  FRA_GER_truce_desc:0 "War is over, the losing side must remain at peace."
-  FRA_nationalist_sentiment_idea:0 "Nationalism among the Population"
-  FRA_nationalist_sentiment_idea_desc:0 "Following the elections, a new wave of nationalism has risen in our country. We cannot act yet but if this movement gets enough support we will be able to make necessary changes to our government."
-  FRA_colony_state_idea:0 "Colonial State"
+  FRA_saar_crisis:0 "자르의 긴장"
+  FRA_homeland_defense:0 "프랑스를 위해!"
+  FRA_economy:0 "경제 개입"
+  FRA_GER_truce:0 "휴전"
+  FRA_GER_truce_desc:0 "전쟁은 끝났고, 패배한 쪽은 평화를 유지해야 한다."
+  FRA_nationalist_sentiment_idea:0 "대중에 퍼진 민족주의"
+  FRA_nationalist_sentiment_idea_desc:0 "선거에 이어 우리 나라에도 새로운 민족주의의 물결이 일고 있다. 우리는 아직 행동할 수 없지만 이 운동이 충분한 지지를 얻으면 우리 정부에 필요한 변화를 줄 수 있을 것이다."
+  FRA_colony_state_idea:0 "식민지"
