--- a/localisation/misc_l_english.yml
+++ b/localisation/misc_l_english.yml
@@ -1,29 +1,29 @@
 ﻿l_english:
-GDL_Unification:0 "§GYou will receive cores on all of Germany!§!"
-GDL_Claim:0 "§GYou will receive claims on all of Germany!§!"
-russia_gets_planes:0 "§GYou will receive 75 converted strat-bombers!§!"
-GER_westwall_tt:0 "Builds Forts On the French Border"
-BAV_west_wall_tt:0 "Builds West Wall"
-BAV_east_wall_tt:0 "Builds Ost Wall"
-BAV_support_CSA_tool_tt:0 "This might spark a civil war in United States..."
-BAV_wsm_indus_tt:0 "§RYou Must Own Niederdeutschland For The Effects To Show§!."
-RUS_jap_treaty:0 "Has Treaty with Japan"
-garner_pre:0 "Garner Elected"
-alf_landon_pre:0 "Alf Landon Elected"
-reed_pre:0 "John Reed Elected"
-long_pre:0 "Huey Long Elected"
-GER_united_germany:0 "Reunited"
-GER_is_reuniting:0 "Claimed Germany"
-RUS_women_squad_tt:0 "§GRussia will receive the legendary Women's Squad of Death!§!"
-TUR_this_will_leave_turkey_to_die:0 "RThis Decision will leave Turks to face Russia alone§!."
-TUR_france_cannot_back_turkey_alone:0 "YFrance will not back §YTurkey§ without our support."
-TUR_this_will_end_the_war:0 "§RTsargrad will be lost for now§."
-TUR_might_cause_majors_to_join:0 "§RMajor powers might guarantee Turkish independence§. "
-rus_general:0 "Consolidated Power"
-rus_agricole:0 "Agricultural Planning"
-rus_liberal_eco:0 "Liberalization Planning"
-rus_industrialization:0 "Industrialization Planning"
-rus_controlled_indus:0 "Centralization Planning"
-RUS_conservative_coalition_wins:0 "Conservative Coalition Wins"
-RUS_new_duma_elected:0 "New Duma is Elected"
+GDL_Unification:0 "§G독일 전역에 코어를 얻게 될 것입니다!§!"
+GDL_Claim:0 "§G독일 전역에 클레임을 얻게 될 것입니다!§!"
+russia_gets_planes:0 "§G전환된 전략 폭격기 75대를 얻게 될 것입니다!§!"
+GER_westwall_tt:0 "프랑스 국경에 요새 건설"
+BAV_west_wall_tt:0 "서부 장벽 건설"
+BAV_east_wall_tt:0 "동부 장벽 건설"
+BAV_support_CSA_tool_tt:0 "이것은 미국에서 내전을 일으킬지도 모릅니다..."
+BAV_wsm_indus_tt:0 "§R저지 독일을 점유하고 있어야 그 효과를 볼 수 있습니다§!."
+RUS_jap_treaty:0 "일본과의 조약"
+garner_pre:0 "가너 선출"
+alf_landon_pre:0 "알프 랜던 선출"
+reed_pre:0 "존 리드 선출"
+long_pre:0 "휴이 롱 선출"
+GER_united_germany:0 "재통일"
+GER_is_reuniting:0 "독일 수복"
+RUS_women_squad_tt:0 "§G러시아는 전설적인 여성 죽음의 사단을 받게 될 것입니다!§!"
+TUR_this_will_leave_turkey_to_die:0 "R이 결정은 터키인들이 홀로 러시아를 상대하게 할 것입니다§!."
+TUR_france_cannot_back_turkey_alone:0 "Y프랑스는 우리의 지원 없이는 §Y터키§를 지지하지 않을 것입니다."
+TUR_this_will_end_the_war:0 "§R차르그라드를 당분간 길을 잃게 될 것입니다§."
+TUR_might_cause_majors_to_join:0 "§R주요 강대국들은 터키의 독립을 보장할 수도 있습니다§."
+rus_general:0 "통합된 권력"
+rus_agricole:0 "농업 계획"
+rus_liberal_eco:0 "자유화 계획"
+rus_industrialization:0 "산업화 계획"
+rus_controlled_indus:0 "중앙집중화 계획"
+RUS_conservative_coalition_wins:0 "보수당 연합 승리"
+RUS_new_duma_elected:0 "새 두마 선출"
 usa_raises_militia:0 "§GUS National militia will rise...§!"
