--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -1,61 +1,61 @@
 ﻿l_english:
- communism:0 "Spartacist"
- communism_noun:0 "Spartacism"
- communism_subtype_desc:0 "Encompassing a broad spectrum of economic and historical views, Marxist politics seek to apply the theories of Karl Marx to political practice. Class struggle and the need for transition to a society based on common ownership of the means of production characterize these ideologies."
- socialist:0 "Socialist"                #####################CONSERVATIVES =/= Conservatism##### Socialist =/= socialism########
- socialist_noun:0 "Socialism"
- socialist_subtype_desc:0 "Socialism is a political and economic theory of social organization which advocates that the means of production, distribution, and exchange should be owned or regulated by the community as a whole."
- democratic:0 "Liberal"
- democratic_noun:0 "Liberalism"
- conservatives:0 "Conservative"
- conservatives_noun:0 "Conservative"
- conservatives_subtype_desc:0 "Conservatism is a political and social philosophy promoting traditional social institutions in the context of culture and civilization. The central tenets of conservatism include tradition, human imperfection, organic society, hierarchy and authority and property rights."
- fascism:0 "Nationalist"
- conservatives_subtype_desc:0 "With a long philosophical tradition of valuing personal liberty, liberalism views safeguarding these rights as the primary function of the state."
- fascism_noun:0 "Nationalism"
- fascism_desc:0 "Totalitarian Regime"
- fascism_subtype:0 "Fascism"
- fascism_subtype_desc:0 "Encompassing a variety of ultra-nationalist movements, fascism typically venerates devotion to the state and uniting the people under a strong leader."
- communism_desc:0 "Totalitarian Regime"
- democratic_desc:0 "Liberal Regime"
- socialist_desc:0 "Socialist Regime"
- conservatives_desc:0 "Conservative Regime"
- conservatism:0 "Conservatism"
- democratic_subtype:0 "Liberalism is a political philosophy or worldview founded on ideas of liberty and equality.[1][2][3] Liberals espouse a wide array of views depending on their understanding of these principles, but generally they support ideas and programmes such as freedom of speech, freedom of the press, freedom of religion, free markets, civil rights, democratic societies, secular governments, gender equality and international cooperation."
- conservatism_desc:0 "Considering rapid changes to society to be potentially harmful, conservatism espouses tradition and moderate reforms, sometimes advocating a return to old moral values."
- liberalism:0 "Liberalism"
- liberalism_desc:0 "With a long philosophical tradition of valuing personal liberty, liberalism views safeguarding these rights as the primary function of the state."
- socialism:0 "Socialism"
- socialism_desc:0 "Striving for equality and a socialist state by reformist means, democratic socialism aims to abolish or mitigate the effects of capitalism with public mandate."
- marxism:0 "Marxism"
- marxism_desc:0 "Encompassing a broad spectrum of economic and historical views, Marxist politics seek to apply the theories of Karl Marx to political practice. Class struggle and the need for transition to a society based on common ownership of the means of production characterize these ideologies."
- leninism:0 "Leninism"
- leninism_desc:0 "A political ideology based in Marxist thought, Leninism seeks to establish a socialist state by a vanguard party leading a revolution overthrowing capitalist society. Once in power, the party rules through a system whereby policies are open for internal debate until a decision has been made."
- stalinism:0 "Stalinism"
- stalinism_desc:0 "Identifying as a form of government applying and developing Marxist-Leninist policies, Stalinism emphasizes rapid industrialization and collectivization as well as the need for a strong, authorative socialist state to purge any counter-revolutionary elements."
- anti_revisionism:0 "Anti-Revisionism"
- anti_revisionism_desc:0 "A reaction to the many ideologies claiming to be successors to Marxism, Anti-Revisionism advocates retaining key elements of original revolutionary theory. Mainly opposing incorporation of capitalist economic elements into socialist states, the ideology is defined as much by what it isn't as what it is."
- anarchist_communism:0 "Anarchist Communism"
- anarchist_communism_desc:0 "An ideology embracing the idea of communism as a stateless society, Anarchist Communism eschews the idea of a transitionary socialist state and favors a society based on voluntary associations and mutual aid."
- nazism:0 "Nazism"
- nazism_desc:0 "Rooted in extreme nationalism, National Socialism is driven by ideas of Germanic supremacy. It promotes aggressive expansionism and a totalitarian state where the people are united under a leader with absolute power, the Führer."
- fascism_ideology:0 "Fascism"
- fascism_ideology_desc:0 "Encompassing a variety of ultra-nationalist movements, fascism typically venerates devotion to the state and uniting the people under a strong leader."
- falangism:0 "Falangism"
- falangism_desc:0 "An authoritarian ideology with traits of fascism and conservatism, Falangism values national and Catholic identity."
- rexism:0 "Rexism"
- rexism_desc:0 "Strongly opposed to both liberal and communist ideals, Rexism is a staunchly conservative nationalist movement who advocate a corporatist economic policy. Employing increasingly populist and authoritarian rhetoric, their ideals are shifting closer to other fascist movements."
- neutrality:0 "Paternal Autocrats"
- neutrality_desc:0 "Authoritarian Regime"
- neutrality_noun:0 "Authoritarian"
- despotism:0 "Despotic"
- despotism_desc:0 "Despotism is a form of government in which a single person rules with absolute power."
- oligarchism:0 "Oligarchic"
- oligarchism_desc:0 "Oligarchy is a form of government in which a group of people rule with absolute power."
- moderatism:1 "Moderatism"
- moderatism_desc:1 "Moderatism is a form of government which avoids the extremes of left and right by taking a moderate position or course of action."
- centrism:1 "Centrism"
- centrism_desc:1 "Centrism is a form of government which wants to achieve common sense solutions that appropriately address current and future needs, that support the public trust and serve the common good with consideration of risk and capacity in context of these needs."
+ communism:0 "스파르타쿠스주의"
+ communism_noun:0 "스파르타쿠스주의"
+ communism_subtype_desc:0 "경제와 역사의 관점을 폭넓게 아우르며,  스파르타쿠스주의적 정치는 카를 마르크스의 이론을 정치적 실천으로 옮길 방법을 모색하고자 했습니다. 계급 투쟁과 생산 수단의 공유에 기반한 사회로의 이행이 필요함을 강조하는 것이 이 이념의 특징과도 같습니다."
+ socialist:0 "사회주의"                #####################CONSERVATIVES =/= Conservatism##### Socialist =/= socialism########
+ socialist_noun:0 "사회주의"
+ socialist_subtype_desc:0 "사회주의는 생산, 분배, 교환의 수단이 공동체 전체에 의해 소유되거나 규제되어야 한다고 주장하는 사회 조직의 정치경제 이론입니다."
+ democratic:0 "자유주의"
+ democratic_noun:0 "자유주의"
+ conservatives:0 "보수주의"
+ conservatives_noun:0 "보수주의"
+ conservatives_subtype_desc:0 "보수주의는 문화와 문명의 맥락에서 전통적인 사회 제도를 촉진하는 정치·사회 철학입니다. 보수주의의 중심에는 전통, 인간의 불완전성, 유기적인 사회, 계급과 권위와 재산권이 있습니다."
+ fascism:0 "국가주의"
+ conservatives_subtype_desc:0 "개인의 자유를 존중하는 오랜 철학적 전통을 통해, 자유주의는 이러한 권리를 보장하는 것을 국가의 제일 기능으로 간주합니다."
+ fascism_noun:0 "국가주의"
+ fascism_desc:0 "전체주의 체제"
+ fascism_subtype:0 "파시즘"
+ fascism_subtype_desc:0 "다양한 국수주의 운동을 아우르는 파시즘은 강력한 지도자 아래 국민을 단결케 하여 국가에 헌신하는 것을 숭배합니다."
+ communism_desc:0 "전체주의 체제"
+ democratic_desc:0 "자유주의 체제"
+ socialist_desc:0 "사회주의 체제"
+ conservatives_desc:0 "보수주의 체제"
+ conservatism:0 "보수주의"
+ democratic_subtype:0 "자유주의는 자유와 평등의 사상에 입각한 정치철학 또는 세계관입니다. 자유주의자들은 이러한 원칙에 대한 그들의 이해에 따라 다양한 견해를 지지하지만, 일반적으로 그들은 언론의 자유, 언론의 자유, 종교의 자유, 자유 시장, 시민권, 민주 사회, 세속적인 정부, 양성 평등 그리고 국제 협력과 같은 아이디어와 프로그램을 지지합니다."
+ conservatism_desc:0 "급격한 변화란 사회에 잠재적인 해로움이 된다고 생각하는 보수주의자들은 전통과 온건한 개혁, 때때로 오래된 도덕적 가치관으로 돌아가는 것을 지지합니다."
+ liberalism:0 "자유주의"
+ liberalism_desc:0 "개인의 자유를 존중하는 오랜 철학적 전통을 통해, 자유주의는 이러한 권리를 보장하는 것을 국가의 제일 기능으로 간주합니다."
+ socialism:0 "사회주의"
+ socialism_desc:0 "개혁의 수단이 될 사회주의 국가와 평등에 대한 갈망을 통해, 민주 사회주의는 국민의 위임을 통한 자본주의적 영향의 완화 혹은 폐지를 추구합니다."
+ marxism:0 "마르크스주의"
+ marxism_desc:0 "경제와 역사의 관점을 폭넓게 아우르며,  마르크스주의적 정치는 카를 마르크스의 이론을 정치적 실천으로 옮길 방법을 모색하고자 했습니다. 계급 투쟁과 생산 수단의 공유에 기반한 사회로의 이행이 필요함을 강조하는 것이 이 이념의 특징과도 같습니다."
+ leninism:0 "레닌주의"
+ leninism_desc:0 "마르크스주의 사상에 기반한 정치 이념으로서, 레닌주의는 자본주의 사회를 전복하기 위한 혁명의 전위대로서 모두를 이끌 사회주의 국가의 설립을 추구합니다. 권력을 잡게 되면, 내부 토론을 통해서 정책을 결정하는 국가 체계를 통해서 당이 국가를 지배합니다."
+ stalinism:0 "스탈린주의"
+ stalinism_desc:0 "마르크스-레닌주의를 정책에 적용하고 발전시키는 정부 형태로 특징 지을 수 있는 스탈린주의는, 반혁명분자를 숙청하기 위한 강력하고 권위적인 사회주의 국가에 대한 필요성과 마찬가지로 급속한 산업화와 집산주의를 강조합니다."
+ anti_revisionism:0 "반수정주의"
+ anti_revisionism_desc:0 "마르크스주의를 계승했다고 자처하는 많은 이념에 대한 반동인 반수정주의는, 원래의 혁명 이론을 이루는 핵심 요소를 유지하는것을 주장합니다. 자본주의 경제의 요소를 사회주의 국가에 도입하는 것에 주로 반발하며 이념 자체적으로 무엇이냐보다 무엇이 아니냐를 더 정의하고자 합니다."
+ anarchist_communism:0 "아나르코공산주의"
+ anarchist_communism_desc:0 "국가 없는 사회를 지향하는 공산주의 사상을 아우르는 이념인 아나르코공산주의는 과도기적 사회주의 국가의 사상을 피하고 자발적 결사와 상호원조에 기초한 사회를 선호합니다."
+ nazism:0 "나치즘"
+ nazism_desc:0 "극도의 국가주의에 뿌리를 두는 국가사회주의는, 독일 우월주의 사상에 의해 주도됩니다. '총통'이라 불리는 절대권력을 보유한 지도자 아래에서 공격적인 팽창주의와 국민이 단결하는 전체주의 국가를 지향합니다."
+ fascism_ideology:0 "파시즘"
+ fascism_ideology_desc:0 "다양한 국수주의 운동을 아우르는 파시즘은 강력한 지도자 아래 국민을 단결케 하여 국가에 헌신하는 것을 숭배합니다."
+ falangism:0 "팔랑헤주의"
+ falangism_desc:0 "파시즘과 보수주의의 특성을 가지고 있는 권위주의 이념인 팔랑헤주의는, 국가와 가톨릭 정체성에 가치를 두고 있습니다."
+ rexism:0 "렉시즘"
+ rexism_desc:0 "자유주의와 공산주의 이념 모두 강하게 반대하는 렉시즘은, 철저히 보수적인 민족주의 운동으로서 조합주의적 경제 정책을 옹호합니다. 대중주의와 권위주의적 수사법으로 목소리를 높이며, 다른 파시스트 운동에 가까운 형태로 전환되는 이념입니다."
+ neutrality:0 "온정주의적 전제주의"
+ neutrality_desc:0 "권위주의 체제"
+ neutrality_noun:0 "권위주의"
+ despotism:0 "전제정"
+ despotism_desc:0 "전제주의는 막강한 권력을 가진 한 사람이 지배하는 정부를 구성합니다."
+ oligarchism:0 "과두정"
+ oligarchism_desc:0 "과두주의는 막강한 권력을 가진 한 무리의 사람들이 지배하는 정부를 구성합니다."
+ moderatism:1 "온건주의"
+ moderatism_desc:1 "온건주의는 온건한 자세나 방침을 취함으로 급진적인 우파나 좌파를 피하는 정부의 형태입니다."
+ centrism:1 "중도주의"
+ centrism_desc:1 "중도주의는 현재와 미래에 필요한 것들을 상식적인 것으로 적절히 연설을 통해 해결하기를 원하는 정부의 한 형태로, 대중의 믿음과 위험을 고려하는 중도선을 이러한 요구의 맥락에서 수용하는 것을 지지합니다."
 
  POL_fascism_party:0 "ONR-Falanga"
  POL_fascism_party_long:0 "Oboz Narodowo Radykalny-Falanga"
@@ -86,27 +86,27 @@
  USA_fascism_party:0 "Silver Legion of America"
  USA_neutrality_party:0 "America First Party"
 
- FRA_communism_party:0 "Parti Communiste Francais"
- FRA_democratic_party:0 "Parti Radical"
- FRA_fascism_party:0 "Impérialistes"
- FRA_neutrality_party:0 "Monarchistes"
+ FRA_communism_party:0 "프랑스 공산당"
+ FRA_democratic_party:0 "급진당"
+ FRA_fascism_party:0 "제국주의자"
+ FRA_neutrality_party:0 "군주주의자"
 
- SOV_communism_party:0 "All-Union Communist Party"
- SOV_democratic_party:0 "Trudoviks"
+ SOV_communism_party:0 "전연합공산당"
+ SOV_democratic_party:0 "트르도비크"
  SOV_fascism_party:0 "RFP"
 
  AUS_communism_party:0 "KPÖ"
- AUS_communism_party_long:0 "Kommunistische Partei Österreichs"
+ AUS_communism_party_long:0 "오스트리아 공산당"
  AUS_democratic_party:0 "GDVP"
- AUS_democratic_party_long:0 "Großdeutsche Volkspartei"
+ AUS_democratic_party_long:0 "대독일 국민당"
  AUS_fascism_party:0 "HB"
- AUS_fascism_party_long:0 "Heimatblock" 
+ AUS_fascism_party_long:0 "보국단" 
  AUS_neutrality_party:0 "LB"
- AUS_neutrality_party_long:0 "Landbund"
+ AUS_neutrality_party_long:0 "란트분트"
  AUS_conservatives_party:0 "CS"
- AUS_conservatives_party_long:0 "Christlichsoziale Partei"
+ AUS_conservatives_party_long:0 "기독사회당"
  AUS_socialist_party:0 "SPÖ"
- AUS_socialist_party:0 "Sozialdemokratische Partei Österreichs"
+ AUS_socialist_party:0 "오스트리아 사회민주당"
 
  CHI_communism_party:0 "Communist Rebels"
  CHI_communism_party_long:0 "The Communist Underground\n§g After the Shangai Massacre where thousands of support of the CPC where killed, the communist party was supressed in the entire Republic. Every member of the party or supporter would be hunted down to their death by republican forces. The Main forces of the CPC undertook the long march and flew to the western mouintans of China. The last communist supporters in the republic are hidding and consist only of a handful of people."
@@ -243,16 +243,16 @@
  BRA_neutrality_party:0 "Estado Novo"
  BRA_neutrality_party_long:0 "Estado Novo"
 
- TUR_fascism_party:0 "Millet Partisi"
- TUR_fascism_party_long:0 "Millet Partisi"
+ TUR_fascism_party:0 "국가당"
+ TUR_fascism_party_long:0 "국가당"
  TUR_communism_party:0 "TKP"
- TUR_communism_party_long:0 "Türkiye Komünist Partisi"
+ TUR_communism_party_long:0 "터키 공산당"
  TUR_democratic_party:0 "DP"
- TUR_democratic_party_long:0 "Demokrat Parti"
- TUR_conservatives_party:0 "Türk Muhafazakar Parti"
- TUR_socialist_party:0 "Türk Sosyalist Partisi"
+ TUR_democratic_party_long:0 "민주당"
+ TUR_conservatives_party:0 "보수당"
+ TUR_socialist_party:0 "터키 사회당"
  TUR_neutrality_party:0 "CHP"
- TUR_neutrality_party_long:0 "Cumhuriyet Halk Partisi"
+ TUR_neutrality_party_long:0 "공화인민당"
 
  HUN_fascism_party:0 "Horthy Resistance"
  HUN_fascism_party_cw:0 "Horthy Government"
@@ -483,11 +483,11 @@
  HAI_communism_party:0 "PKA"
  HAI_communism_party_long:0 "Pati Kominis Ayisyen"
  KOR_communism_party:0 "WPK"
- KOR_communism_party_long:0 "Worker's Party of Korea"
- KOR_democratic_party:0 "Liberal Party"
- KOR_neutrality_party:0 "Yi Dynasty"
+ KOR_communism_party_long:0 "조선로동당"
+ KOR_democratic_party:0 "자유당"
+ KOR_neutrality_party:0 "이왕가"
  KOR_fascism_party:0 "NDPC"
- KOR_fascism_party_long:0 "National Defense Policy Committee"
+ KOR_fascism_party_long:0 "국방정책위원회"
  ICE_democratic_party:0 "Progress Party"
  ICE_communism_party:0 "People's Unity Party"
  ICE_fascism_party:0 "Nationalist Party"
@@ -572,36 +572,36 @@
  PAK_neutrality_party:0 "Muslim League"
 
 ################################
-RUS_conservatives_party:0 "Cadets"
-RUS_neutrality_party:0 "Union of October 17"
-RUS_democratic_party:0 "Progressive Party"
-RUS_fascism_party:0 "Russian Assembly"
-RUS_socialist_party:0 "SR"
-RUS_socialist_party_long:0 "Socialist-Revolutionary Party"
-RUS_communism_party:0 "Workers Party of Russia"
+RUS_conservatives_party:0 "사관생도들"
+RUS_neutrality_party:0 "10월 17일 연합"
+RUS_democratic_party:0 "진보당"
+RUS_fascism_party:0 "러시아 의회"
+RUS_socialist_party:0 "SDLP"
+RUS_socialist_party_long:0 "사회민주노동당"
+RUS_communism_party:0 "러시아 노동자당"
 
 BAV_communism_party:0 "KPD"
-BAV_communism_party_long:0 "Kommunistische Partei Deutschland"
-BAV_democratic_party:0 "Christlisch-Deutsche Union"
+BAV_communism_party_long:0 "독일 공산당"
+BAV_democratic_party:0 "독일 기독교민주연합"
 BAV_fascism_party:0 "NSDAP"
-BAV_fascism_party_long:0 "Nazionalsozialistische Partei Bayern"
-BAV_neutrality_party:0 "Wittelsbach Loyalists"
-BAV_conservatives_party:0 "Bayerische Konservative Partei"
-BAV_socialist_party:0 "Bayerische Sozialistische Partei"
+BAV_fascism_party_long:0 "바이에른 국가사회주의당"
+BAV_neutrality_party:0 "비텔스바흐 충성파"
+BAV_conservatives_party:0 "바이에른 보수당"
+BAV_socialist_party:0 "바이에른 사회주의당"
 
-GER_neutrality_party_long:0 "Deutschekonservative Partei"
+GER_neutrality_party_long:0 "독일 보수당"
 GER_neutrality_party:0 "DKP"
-GER_socialist_party_long:0 "Sozialdemokratische Partei Deutschlands"
+GER_socialist_party_long:0 "독일 사회민주당"
 GER_socialist_party:0 "SPD"
-GER_conservatives_party_long:0 "Zentrum Partei"
+GER_conservatives_party_long:0 "독일 중앙당"
 GER_conservatives_party:0 "ZP"
 GER_fascism_party:0 "DNVP"
-GER_fascism_party_long:0 "Deutschnationale Volkspartei"
+GER_fascism_party_long:0 "독일 국가인민당"
 GER_communism_party:0 "KPD"
-GER_democratic_party_long:0 "Deutsche Demokratische Partei"
+GER_democratic_party_long:0 "독일 민주당"
 GER_democratic_party:0 "DDP"
 
-FRA_conservatives_party_long:0 "Alliance Républicaine Démocratique"
+FRA_conservatives_party_long:0 "민주공화당 동맹"
 FRA_conservatives_party:0 "ARD"
-FRA_socialist_party_long:0 "Section Française de l'Internationale Ouvrière"
+FRA_socialist_party_long:0 "노동자 인터내셔널 프랑스 지부"
 FRA_socialist_party:0 "SFIO"
