--- a/localisation/ger_focus_l_english.yml
+++ b/localisation/ger_focus_l_english.yml
@@ -244,7 +244,7 @@
  GER_anti_RUS_policy_desc:0 "If we want to reclaim our lost lands in the East, we must establish anti Russian policy to agitate our people against the Russians. This will spark support for our war effort."
  GER_dockyard:0 "조선소 확장"
  GER_dockyard_desc:0 "We must expand our docks to build new and more advanced vessels." 
- GER_northern_flank:0 "Northern Flank"
+ GER_northern_flank:0 "북부 방면"
  GER_northern_flank_desc:0 "Our war in the West has come to a stalement. In these desperate times, we need desperate measures. We shall invade the Netherlands to swiftly outflank the Belgians and obliterate their resistance."
  GER_war_NOR:0 "노르웨이 개입"
  GER_war_NOR_desc:0 "Norway possesses a very important stratigic position, through their waters we can reach the Northern Sea and avoid the possible blockade imposed by the British. If we want to secure this passage, we should consider the invasion of Norway..."
